--- a/content/weekly-update/בין-מדבריות-הקרח-לחוף-הים-הקיצי.md
+++ b/content/weekly-update/בין-מדבריות-הקרח-לחוף-הים-הקיצי.md
@@ -12,7 +12,7 @@ date: '2020-07-18T17:26:45+03:00'
 
 **שיהיה שבוע נפלא!**
 
-**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי<br/>**
+**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי<br>**
 
 ## שכבת הצעירים
 
@@ -104,7 +104,7 @@ date: '2020-07-18T17:26:45+03:00'
 
 **מאחלות שבוע פורה ונעים,**
 
-**צוות שכבת הצעירים: אלינור, ימית, אורטל ומיכל <br/>**
+**צוות שכבת הצעירים: אלינור, ימית, אורטל ומיכל <br>**
 
 ## שכבת הבוגרים
 
