--- a/content/weekly-update/המשפחות-שלנו-והבית-שלנו.md
+++ b/content/weekly-update/המשפחות-שלנו-והבית-שלנו.md
@@ -65,7 +65,7 @@ date: '2020-02-29T16:29:16+02:00'
 
 **אחי**
 
-**וכל צוות ילדי הטבע הדמוקרטי<br/>**
+**וכל צוות ילדי הטבע הדמוקרטי<br>**
 
 ## שכבת הצעירים
 
@@ -121,7 +121,7 @@ date: '2020-02-29T16:29:16+02:00'
 
 קראנו יחדיו את הספר "לילה טוב גורילה" מאת פגי רתמן, וראינו משפחת חיות מסוג אחר. חשבנו מי מטפל בחיות בגן החיות, ודיברנו על כך שהחיות מעדיפות לישון עם "אבא ואמא" מאשר במיטות שלהן עצמן. הכי אהבו הילדים לעקוב אחר העכבר והבננה שלו!
 
-<br/>
+<br>
 
 # הפינה של אטרף
 
@@ -139,7 +139,7 @@ date: '2020-02-29T16:29:16+02:00'
 
 הילדימות כל כך נהנו לערוך את השולחן, לסדר את הכיסאות סביב ולארח את החברים, והכל-הכל לבד!
 
-<br/>
+<br>
 
 # הפינה של כוורת
 
@@ -159,7 +159,7 @@ date: '2020-02-29T16:29:16+02:00'
 
 **ויקה, מיכל, ימית, אלינור וזיו**.
 
-<br/>
+<br>
 
 ## שכבת הבוגרים
 
