--- a/content/weekly-update/כך-באים-השותלים.md
+++ b/content/weekly-update/כך-באים-השותלים.md
@@ -68,7 +68,7 @@ date: '2020-02-15T19:00:13+02:00'
 
 גילינו שעם את החפירה אנחנו חופרים בורות באדמה, עם המעדר עודרים את האדמה ומזיזים כמויות קטנות של אדמה, שותלים את הזרעים או השתילים, ועם הידיים אפשר לכסות ולהדק את השתילים באדמה. אחרי השתילה, הבטנו סביב וראינו שכל הדשא שלנו התמלא באדמה, הוצאנו את מטאטא הרחוב ובעזרתו אספנו את האדמה לתוך ערמה גדולה שאותה החזרנו לאדניות. 
 
-# הפינה של אטרף <br/>
+# הפינה של אטרף <br>
 
 בעזרת דיקלום חדש שהכרנו, התחלנו להעמיק בחלקי העץ:
 
@@ -96,7 +96,7 @@ date: '2020-02-15T19:00:13+02:00'
 
 עטפנו עצמנו טוב טוב בשמיכות הנעימות והמחממות שלנו והאזרנו לשיר [ברוש ](https://www.youtube.com/watch?v=hYzVAxTT9Pw)/ עלמה זוהר. 
 
-# הפינה של כוורת <br/>
+# הפינה של כוורת <br>
 
 אחרי שהתנסינו בנגינה בחליל צד וגילינו שזה ממש קשה, ניסינו גם כלי נשיפה אחר. השבוע ירדן הביא לנו חלילית, וגילינו שזה כבר הרבה יותר קל. התאמנו בנשיפה חזקה שמוציאה צליל גבוה, ונשיפה עדינה שמוציאה צליל נמוך יותר. למדנו שנשיפה זה כשאנחנו מוציאים אוויר, ושאיפה זה כשאנחנו מכניסים אוויר פנימה לריאות.
 
