--- a/content/weekly-update/מבוא-למסיבות-הסיום.md
+++ b/content/weekly-update/מבוא-למסיבות-הסיום.md
@@ -8,7 +8,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 **שבת מנוחה
 **
-<br/>
+<br>
 **
 <br>**
 
@@ -24,11 +24,11 @@ date: '2019-06-29T19:08:57+03:00'
 
 אם המחנכת עסוקה בחיתוך הירקות היא איננה יכולה לקבל את הילדימות, זוהי פעילות בה המחנכות נדרשות לריכוז רב, (בכל זאת יש סכין על השולחן).
 
-\#<br/>שר זה אציין, וזה רלוונטי לכל השכבות אבל בעקיר לצעירים, כי הילדימות מסוגלים להפרד עם כל חברי וחברות הצוות! לא משנה מה תפקידם. אנחנו עובדים מאוד קשה כדי ייצר אינטראציות בין כל הצוות לכל הילדימות על מנת להמנע מתלות ספציפית בדמות מבוגר. לחלקכם יש צורך בפרידה מול דמות קבועה, אך דעו לכם שבריא יותר להפרד עם כל חברי הצוות- כולם מיומנים מאוד! זה מעביר מסר של בטחון ואמון ומכין את כולכם תפיסתית למעבר לשכבת הבוגרים, שם כבר כמעט אין "פרידות" הילדימות פשוט נכנסים לגן ומתחילים את יומם. ככל שתתקבעו על דמות אחת, אתם תעבירו מסר של אי אמון וחוסר בטחון לילד/ה שלכם, הפוך ממה שבוודאי הייתם רוצים שיקרה 
+\#<br>שר זה אציין, וזה רלוונטי לכל השכבות אבל בעקיר לצעירים, כי הילדימות מסוגלים להפרד עם כל חברי וחברות הצוות! לא משנה מה תפקידם. אנחנו עובדים מאוד קשה כדי ייצר אינטראציות בין כל הצוות לכל הילדימות על מנת להמנע מתלות ספציפית בדמות מבוגר. לחלקכם יש צורך בפרידה מול דמות קבועה, אך דעו לכם שבריא יותר להפרד עם כל חברי הצוות- כולם מיומנים מאוד! זה מעביר מסר של בטחון ואמון ומכין את כולכם תפיסתית למעבר לשכבת הבוגרים, שם כבר כמעט אין "פרידות" הילדימות פשוט נכנסים לגן ומתחילים את יומם. ככל שתתקבעו על דמות אחת, אתם תעבירו מסר של אי אמון וחוסר בטחון לילד/ה שלכם, הפוך ממה שבוודאי הייתם רוצים שיקרה 
 
 
 
-<b<br/>
+<b<br>
 
 \# **זמן מובילות**- הקשר אתכם מאוד חשוב לנו, אנחנו משתדלות לעדכן אתכם בכל, וגם לתת לכם כלים לעבודה בבית. עם זאת אנחנו מזכירות שהזמן שלנו לא אינסופי. מעבר לעבודה עם הילדימות יש כאן המון דברים שקורים- ישיבות (אבל מלא ישיבות), תכנונים שבועיים, הכנת אביזרים ותוכן נלמד. אין לנו רגע דל, לכן- הבינו כי אין ביכולתנו לעניק שיחות יעוץ כל שבוע. שיחות היעוץ הן שירות שהוא "אקסטרה" שאנחנו נותנים באהבה, אבל צריך להיות לזה מינון. יש הורים שמבקשים שיחה כל שבוע, זה לא אפשרי מבחינתנו. שנית, שעות השיחה עם המובילות הן 8:00-18:00. אנחנו לא מקיימות שיחות טלפוניות בשעות 21-22 בלילה. אנא כבדו את הזמן שלנו ואת חיינו האישיים 
 
@@ -36,7 +36,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 <br>
 
-\#<br/>ורום בנושא פרידה ממוצצים** 
+\#<br>ורום בנושא פרידה ממוצצים** 
 
 לאור מספר פניות מכם ההורים בנושא פרידה ממוצצים, אנחנו מתכננים לקיים פורום הורים בו נענה על כל השאלות במרוכז. זה יקרה בשעה 17:00 בגן, נעדכן בקרוב מאוד על התאריך בקבוצות האוטסאפ.
 
@@ -44,11 +44,11 @@ date: '2019-06-29T19:08:57+03:00'
 
 
 
-<<br/>
+<<br>
 
 **שבוע קליל ושמח
 **
-<br/>
+<br>
 **אחי וכל צוות ילדי הטבע הדמוקרטי
 **
 
@@ -80,7 +80,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 
 השבוע בממלכת החושים שלנו יצאנו למסע בעקבות חוש השמיעה. אחד החושים החשובים ביותר אשר דרכו למדנו לא מעט על עצמנו ועל הסביבה שלנו.
-<br/>
+<br>
 הכרנו את השיר של מירב האוסמן ״[המסע בעקבות חמשת החושים](<https://www.youtube.com/watch?v=4_tH09pc80U&t=170s >)״  (החל מהדקה 0:57)
 
 
@@ -110,7 +110,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 התחלנו מצלילים קלים ומוכרים יותר כמו יללות חתול, צהלות של סוס, נביחות של כלבים ואז עברנו לצלילים מאתגרים יותר …האם שמעתם פעם את [קולו של הקרנף](https://www.youtube.com/watch?v=j5lzmNhxRck&t=10s)?  לנו זה נשמע כמו דלת חורקת, שלא נדבר על קולו של הג׳ירף …
 
-קו<br/>ה<br/> הובילו אותנו לשיח על צלילים נעימים ולא נעימים. למשל עומר לא אהב לשמוע את הקולות החזקים של החיות , הוא נבהל ואמר ״ לא רוצה סוס!״ לו זה הרגיש לא נעים בזמן שלשאר החברים זה לא שינה בכלל. אז מה עושים אם אנחנו שומעים צליל שמפחיד אותנו או לא נעים לנו או לחברים שלנו? אפשר לאטום את האוזניים.  
+קו<br>ה<br> הובילו אותנו לשיח על צלילים נעימים ולא נעימים. למשל עומר לא אהב לשמוע את הקולות החזקים של החיות , הוא נבהל ואמר ״ לא רוצה סוס!״ לו זה הרגיש לא נעים בזמן שלשאר החברים זה לא שינה בכלל. אז מה עושים אם אנחנו שומעים צליל שמפחיד אותנו או לא נעים לנו או לחברים שלנו? אפשר לאטום את האוזניים.  
 
 אטמנו את האוזניים חזק חזק ותוך כדי דיברנו והשמענו צלילים שונים, האם עדיין שמענו את הקולות החזקים שלא היו נעימים? כמעט ולא. החברים הוסיפו שאפשר לתת גם לתת יד לחבר או חיבוק, לנו זה נשמע כמו פתרון מעולה! 
 
@@ -126,7 +126,7 @@ date: '2019-06-29T19:08:57+03:00'
 
  אחד השירים האהובים ביותר על השמוליקים ואיתו אנחנו מסיימים כל מפגש.
 
-<br/><br/>
+<br><br>
 
 <br>
 <br>
@@ -142,7 +142,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 הסיבה שבחרתי להרחיב לכם הפעם על הספר היא שהילדימות גילו עניין רב בסיפור עצמו. בהתחלה רק השמעתי להם את הסיפור ללא הספר ביד, מה שהיה מעט מוזר לילדימות שכל הזמן חיפשו את הספר, כשלמעשה הם היו צריכים רק להקשיב ולהפעיל את הדימיון שלהם בלי להתבונן בתמונה (שלעיתים קצת מכבה את הדימיון).  לאחר שכבר הכרנו את הסיפור הצגתי בפני הילדמות גם את הספר עצמו, התבוננו באיורים השונים, דיברנו על מה שאנחנו רואים... ״טיילור עצוב״, ״בת היענה טומנת את הראש בחול״ … 
 
-<br/><br/>
+<br><br>
 
 לאחר מנוחת הצהריים פתחנו את הספרייה. הספרים הונחו על המדף בשורה והילדימות ניגשו בתורם לקחת ספר אחד. עבדנו על עקרון ההחלפה. כאשר אני מסיימת עם הספר אני מחזירה אותו למקום בצורה מסודרת ואחר כך בוחרת ספר חדש. אבל מה קורה אם הספר שאני רוצה נמצא אצל חבר או חברה? אפשר לגשת אליהם ולהציע להתחלף בספרים. לפעמים החברים מסכימים מיד ולפעמים עליהם להתאזר בסלבנות. 
 
@@ -162,7 +162,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 הם למדו גם למזוג לבד את הטחינה לצלחת! איך עושים את זה? מקרבים את קערת הטחינה לצלחת, כדי לא תטפטף על השלחן, ביד אחת מחזיקים את הכף וביד השנייה את הצלחת כדי שלא תזוז ומוזגים. כמה אפשר למזוג? כף אחת לכל אחד, שוב, כדי שיספיק לכל החברים שלנו. ברגע שכולם סיימו למזוג אפשר לקחת עוד תוספת. 
 
-<br/><br/>
+<br><br>
 
 כאשר התבוננו בילדימות ראינו עד כמה השינוי היה מבורך, העצמנו את תחושת המסוגלות שלהם,  חיזקנו את הצורך התמידי שלהם בלהיות עצמאיים ומעבר לכך שידרנו להם שאנחנו סומכות עליהם שידעו לבחור את ארוחת הבוקר שלהם לבד. 
 
@@ -174,7 +174,7 @@ date: '2019-06-29T19:08:57+03:00'
 **שמולה בקטנה 
 **
 
-<br/><br/>
+<br><br>
 
 פעילות שכבתית בקבוצות קטנות.
 
@@ -186,7 +186,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 בשעת הסיפור המחשנו את הסיפור ״לבד על המרבד״ מאת בריאן וילדסמית. הזכרנו את צלילי החיות השונות וכמובן למדנו כיצד אנחנו מצטרפים למשחק עם החברים, באיזו דרך פונים אליהם ואיך בכלל מבקשים.  
 
-<br/>
+<br>
 
 בכיתה הגדולה בנינו מגדלים גבוהים ורחבים מקוביות עץ גדולות, יצאנו למסע קניות ופשטנו על כל הירקנים. בסיום הטיול נשכבנו על המזרן הגדול, התכסנו בבגדים גדולים וקטנים ותפסנו מנוחה קלה מהטיול המפרך.   
 
@@ -194,13 +194,13 @@ date: '2019-06-29T19:08:57+03:00'
 
 <br>
 <br>
-<br/>
+<br>
 **לטיול יצאנו, אצטרובלים אספנו והבאנו אותם לגן! 
 **
 
 
 
-ב<br/> הסופש עומר יצא לטיול עם משפחתו ביער, שם הם מצאו המון אצטרובלים קטנים ועגולים. אחרי שעומר סיפר לנו על הטיול הנפלא, הפכנו את האצטרובלים שלו לשרשרת מיוחדת לכל החברים. 
+ב<br> הסופש עומר יצא לטיול עם משפחתו ביער, שם הם מצאו המון אצטרובלים קטנים ועגולים. אחרי שעומר סיפר לנו על הטיול הנפלא, הפכנו את האצטרובלים שלו לשרשרת מיוחדת לכל החברים. 
 
 אין כמו שיתוף חוויות עם החברים מהגן! זו דוגמא נוספת לדברים הנפלאים שיוצאים מהשיתוף בתמונות שלכם מהסופש. זה נותן לנו הרגשה שאכן נוצר קשר ישיר בין הבית לגן אנחנו גאות ומברכות על כך! 
 
@@ -222,7 +222,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 \*	בשבוע הקרוב אנחנו נחתוך ירקות לארוחת הבוקר הבוקר בכיתת שמוליק יחד עם הילדימות. חשוב לציין שהמחנכת שתהיה בכיתה לא תהיה פנויה לפרידות  כיוון שחייבת להיות עירנית לילדימות שאיתה. הפרדו בבקרים לפי הטקס הרגיל בבוקר והשתמשו בשאר אנשי הצוות, אנחנו כבר נשלח לשם את הילדים. 
 
-<br/><br/>
+<br><br>
 
 <br>
 
@@ -292,7 +292,7 @@ date: '2019-06-29T19:08:57+03:00'
 התבוננו בצבעים, בחרטום ובמפרש נזכרנו מדוע אנחנו צריכים את כל אלה בסירה שלנו. 
 
 טוב, אז לאן נפליג איתה שאלתי את החברים? 
-<br/><br/>
+<br><br>
 לים! ברור... לים בתל אביב?  
 
 אולי נפליג למקום יותר רחוק, מה אתם אומרים? בוודאי שרוצים ענו החברים. 
@@ -326,7 +326,7 @@ date: '2019-06-29T19:08:57+03:00'
 בכל אי עולם ומלואו- אנשים, חיות ומגוון דברים שאפשר לחקור ולראות. 
 
 הבאתי לכיתה מפה ענקית, אולי היא תעשה לנו קצת סדר בבלאגן.
-<br/><br/>
+<br><br>
 פרסנו את המפה, ישבנו סביבה והתבוננו. 
 
 ראינו המון כחול של ים וגבעות קטנות באמצע. אה, אלה הם האיים. יש איים קטנים ויש גדולים, לכל אחד יש שם אחר וצורה קצת שונה. 
@@ -340,7 +340,7 @@ date: '2019-06-29T19:08:57+03:00'
 שטנו והגענו אל האי הראשון.. ואת מי פגשנו? 
 
 
-<br/><br/>
+<br><br>
 <br>
 <br>
 
@@ -352,7 +352,7 @@ date: '2019-06-29T19:08:57+03:00'
 לא יכולנו לחכות כבר לפגוש את הפילים. כולם רוצים להגיע לתאילנד כדי לרכב על הפילים, אנחנו פחות בענייני הרכיבה, אבל על זה נספר כבר בשבוע הבא...
 
 ישבנו במעגל והקשבנו לצעידות... זה נשמע כאילו משהו עצום מתקרב. 
-<br/><br/>
+<br><br>
 הייתה שתיקה, אולי באמת יש פיל בחדר? 
 
 לא...כבר היינו רואים אותו
@@ -370,7 +370,7 @@ date: '2019-06-29T19:08:57+03:00'
 יכולנו לראות ולהרגיש שהעור של הפיל הוא עבה ומחוספס. 
 
 ומה עם העור שלנו? 
-<br/><br/>
+<br><br>
 תמרי הצביעה על המנורה ואמרה, הנה האור שלנו. נכון זה באמת אור, 
 
 אבל יש גם סוג אחר של "עור", עור הגוף שלנו. שמכסה, עוטף ומגן עלינו. 
@@ -392,25 +392,25 @@ date: '2019-06-29T19:08:57+03:00'
 התחלקנו לזוגות, כל זוג קיבל קערה עם נוצה, מקל קטן ואטב. בכל סיבוב הוצאנו משהו אחר מהקערה ובדקנו האם אנחנו רגישים למגע או לא. מה יותר נעים ומה פחות? האם כשהנוצה מלטפת לי את היד זו אותה תחושה כמו דגדוג בפנים? ומה עם השיער? 
 
 המון שאלות, שיח ולמידה שיצאו מתוך קערה אחת. 
-<br/>
+<br>
 גילינו שהעור הדק שלנו רגיש כמעט לכל מגע, אצל חלק פחות ואצל חלק יותר. 
 
 
 
 <br>
-<b<br/>
+<b<br>
 
 **ארוחת בוקר של פילים  
 **
 
 כיאה לפילים אמיתיים, הקדשנו את השיח בארוחת בוקר לפירות וירקות.
-<br/>
+<br>
 סיפרנו שהפילים הם צמחוניים. מה זה אומר? תותי אמרה שהם אוכלים רק עגבנייה. עומרון הוסיף את המלפפון... ועוד המון סוגים של פירות וירקות הם אוהבים. 
 
 אם כבר פילים אז עד הסוף. הוספנו לארוחת הבוקר שלנו פרי קטן עגול ומתקתק, דובדבנים! 
 
 אחרי ששאבנו עם החדק את כל הירקות מהמגש, הזכרנו שבתוך הדבדבן מסתתר חרצן קטן ושובב שממנו אנחנו צריכים להיזהר. והנה ההבדל הדק בינינו לבין הפילים....בביסים קטנים וזהירים נשנשנו דובדבנים וחשבנו לעצמנו כמה נחמד להיות פיל. 
-<br/>
+<br>
 
 
 <br>
@@ -430,7 +430,7 @@ date: '2019-06-29T19:08:57+03:00'
 \*\* נצ'י הביא לנו את "שאול החתול והשכן החדש שממול" מאת קימברלי וג'ימס דין
 
 
-<br/><br/>
+<br><br>
 נסיים באיחולים וברכות למשפחת פיניש האהובה שלנו- מור ואור ובמיוחד לעומרון שהפך להיות אח גדול!  
 
 
@@ -454,7 +454,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 העמדה נפתחת בשעה 7:30 ובה נוכחת תמיד אחת ממחנכות שכבת הצעירים. 
 
-ממ<br/> <br/>בחום להגיע מוקדם כדי שהילדים יספיקו לקחת חלק בחוויה, מניסיון הילדימות עפים על זה. 
+ממ<br> <br>בחום להגיע מוקדם כדי שהילדים יספיקו לקחת חלק בחוויה, מניסיון הילדימות עפים על זה. 
 
 בנוסף, קבלו בהבנה שהמחנכת הנמצאת בעמדה לא פנויה לפרידות, אתם מוזמנים תמיד לגשת לפרידה עם כל איש צוות אחר. 
 
@@ -464,7 +464,7 @@ date: '2019-06-29T19:08:57+03:00'
 <br>
 
 **שבוע קייצי ונעים ומלא באוכל של פילים:)
-**<br/><br/>
+**<br><br>
 
 **שירז ואלינור 
 **
@@ -480,7 +480,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 <br>
 
-שב<br/>ו<br/>ם/ן!
+שב<br>ו<br>ם/ן!
 
 מזל טוב לעידודי שלנו שחגג איתנו יום הולדת השבוע!
 
@@ -508,7 +508,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 
 
-<b<br/><br/>
+<b<br><br>
 <br>
 
 **ספרים רבותיי, ספרים! – "משהו אחר", מאת: קתרין קייב, איורים: כריס רידל
@@ -518,19 +518,19 @@ date: '2019-06-29T19:08:57+03:00'
 
 הספר "משהו אחר" מעמיד במרכזו דמות ששמה- משהו אחר. משהו אחר מנסה להיות כמו כולם. אבל כל דבר שהוא עושה רק מראה עד כמה הוא שונה. ואז, יום אחד, מגיע לבקר את משהו אחר מישהו ומנסה להיות חבר שלו. אבל משהו אחר ממש לא בטוח שמישהו הוא בכלל כמוהו. ואז, רגע לפני שמשהו אחר דוחה את מישהו, הוא נזכר שכך הוא בעצמו בדיוק הרגיש כאשר החברים לא שיתפו אותו כי הוא שונה מהם, ומחליט שתף ולהתחבר למישהו והם הופכים לחברים טובים – למרות ובזכות השוני ביניהם.
 
-הס<br/>למד בצורה חוויתית ועקיפה ערכים של אמפתיה, קבלה ואהבת השוני. כל אחד מאיתנו הוא קצת אחר, מיוחד וייחודי. לכל ילד יש את אופן המשחק שלו, דרך האכילה שלו, תחומי העניין שלו.. וזה בדיוק מה שהספר מנסה להעביר. 
+הס<br>למד בצורה חוויתית ועקיפה ערכים של אמפתיה, קבלה ואהבת השוני. כל אחד מאיתנו הוא קצת אחר, מיוחד וייחודי. לכל ילד יש את אופן המשחק שלו, דרך האכילה שלו, תחומי העניין שלו.. וזה בדיוק מה שהספר מנסה להעביר. 
 
 הספר הציף כל מיני שאלות.
 
 מיהו "משהו אחר"?
 
-למ<br/>ר<br/>לו ככה?
+למ<br>ר<br>לו ככה?
 
 במה הוא שונה מהאחרים? או בעצם מיוחד...
 
 במה אנחנו מיוחדים? מה הופך אותנו למה שאנחנו?
 
-הי<br/>ו<br/>ו מרותקים לספר והתעניינו מאוד ברגשותיו של משהו אחר, הזדהו עם תחושותיו והתרגשו כשמישהו הפך להיות חבר שלו.
+הי<br>ו<br>ו מרותקים לספר והתעניינו מאוד ברגשותיו של משהו אחר, הזדהו עם תחושותיו והתרגשו כשמישהו הפך להיות חבר שלו.
 
 עוד דבר נחמד שהספר זימן לנו זוהי לחיצת היד. כשמישהו מגיע למשהו אחר, הוא מושיט את כף ידו ולוחץ את ידו. דיברנו על כך שכשנפגשים אפשר ללחוץ את היד למי שפוגשים. כמובן שהתאמנו על כך והילדים התלהבו ולא רצו להפסיק!
 
@@ -554,7 +554,7 @@ date: '2019-06-29T19:08:57+03:00'
 <br>
 
 **הספר של אדם
-**<br/><br/><br/>
+**<br><br><br>
 
 השבוע אדם שלנו הביא לגן ספר מאוד מיוחד. מעין אנציקלופדיה המתארת מושגים שונים מהכפר. וכמובן, אין כמו ספר טוב ומעניין לשקוע אליו וללמוד ממנו. ישבנו על הדק זמן רב, התבוננו בתמונות, הבחנו בפרטים ולמדנו המון. תחילה ראינו בספר טרקטורים, מחרשות, משדדות... ראינו שפעם היו עושים את הכל באופן ידני והיו עובדים מאוד קשה. 
 
@@ -582,7 +582,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 השמענו את השיר ורקדנו בכיתה. ליאו שם לב לתופים וניסינו לחקות את הקצב כמו בשיר. בשלב הבא רצינו לאתגר קצת את הילדים, אז כיבינו מהר את השיר ואמרנו לכולם לחזור למקום ואז… הדלקנו את השיר וזחלנו בכיתה כמו צבים והלכנו לפי התופים, שוב מפסיקים את השיר ואז ממשיכים…. הפעם שמים לב לבס וכשהבס מנגן אנחנו מזיזים את הטוסיק!
 
-<br/><br/>
+<br><br>
 
 חזרנו בסוף לישיבה וגילינו לחברים שמדובר בביטלס. חלק מהחברים אהבו את השיר וחלק לא, אמרנו לילדימות שזה בסדר וכמו שלמדנו שכולנו נראים שונה אנחנו גם אוהבים דברים שונים, יכול להיות שיהונתן מאוד אוהב את השיר קום טוגת'ר ואילו תומר מעדיף לשמוע את צוללת צהובה, מצויין!
 
@@ -604,7 +604,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 <br>
 <br>
-<br/><br/>
+<br><br>
 **הודעות חשובות
 **
 
@@ -614,7 +614,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 \# חודש יולי ואחרון מתחיל- לא לשכוח להביא מגבונים.
 
-<br/><br/><br/>
+<br><br><br>
 
 <br>
 
@@ -644,7 +644,7 @@ date: '2019-06-29T19:08:57+03:00'
 **
 
 והשבוע התעמקנו בפסקה:
-<br/>
+<br>
 
 
 > ״תסתכל ברחובות מלפנים, מאחור,
@@ -656,7 +656,7 @@ date: '2019-06-29T19:08:57+03:00'
 > עם רגליים טובות, 
 >
 > ועם שכל לחשוב,
-><br/>
+><br>
 > תזהר לא ללכת ברחוב קצת 
 >
 > לא טוב״.
@@ -664,7 +664,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 
 <br>
-<b<br/>
+<b<br>
 <br>
 
 **ניסינו לחשוב יחד איזה מן בחירות אנו פוגשים במהלך היום.
@@ -674,7 +674,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 או כשאבא שכח את הספר שכל כך רצינו להביא לגן וכל מה שהתחשק לנו לעשות זה לצעוק עליו ולבכות.
 
-<br/>
+<br>
 
 לכל הבחירות האלה יש גם מסלול אחר, פנייה אחרת…
 
@@ -688,7 +688,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 אז לפעמים נבחר לא נכון, נעצור רגע, ננשום עמוק ונחשוב איך נוכל לתקן את הבחירה.
 
-במ<br/>השבוע כשנתקלנו בצומת של בחירות עצרנו וחשבנו איזו בחירה היא הנכונה לנו.
+במ<br>השבוע כשנתקלנו בצומת של בחירות עצרנו וחשבנו איזו בחירה היא הנכונה לנו.
 
 למשל כששיחקנו בשולחן המים והשפרצנו ואז הגיע חבר חדש, האם נמשיך להשפריץ או שנעצור רגע ונוודא שהחבר/ה יודעים שמשפריצים?
 
@@ -708,7 +708,7 @@ date: '2019-06-29T19:08:57+03:00'
 
 ומחוץ לכותלי הגן לתת לילדימות את הכלים לשמור על עצמם, לדעת שלספר זה חשוב, ולומר לא! בבטחון כשמציקים, צובטים או כשעושים לי משהו שהוא לא נעים לי. 
 
-<br/>
+<br>
 
 הבנו שיש איברים שהם פרטיים שלנו במיוחד
 
