--- a/content/weekly-update/מהיבשה-אל-הים-שבוע-של-מים-ודגים-בגן.md
+++ b/content/weekly-update/מהיבשה-אל-הים-שבוע-של-מים-ודגים-בגן.md
@@ -73,7 +73,7 @@ date: '2020-06-20T18:01:42+03:00'
 
 **בברכת שבוע ספר מהנה לכולם!**
 
-**אורטל, מיכל, ימית ואלינור <br/>**
+**אורטל, מיכל, ימית ואלינור <br>**
 
 ## שכבת הבוגרים
 
