--- a/content/weekly-update/מנווה-המדבר-לים-סוף.md
+++ b/content/weekly-update/מנווה-המדבר-לים-סוף.md
@@ -54,7 +54,7 @@ date: '2020-08-01T18:34:39+03:00'
 
 **18:00** מיה, אביגיל, גלי, דר, נעה פרידלנד, נבו, תמר, לילי
 
-בהצלחה לכולם! <br/>
+בהצלחה לכולם! <br>
 
 **צעירים**:
 
