--- a/content/weekly-update/מסע-אל-בטן-האדמה.md
+++ b/content/weekly-update/מסע-אל-בטן-האדמה.md
@@ -20,7 +20,7 @@ date: '2020-02-01T19:07:57+02:00'
 
 **שבת שלום,**
 
-**אחינועם<br/>**
+**אחינועם<br>**
 
 ## שכבת הצעירים
 
@@ -60,7 +60,7 @@ date: '2020-02-01T19:07:57+02:00'
 
 בשבועיים האחרונים חגגנו ימי הולדת לאלה קפלן ולעמית, וההתרגשות הייתה רבה. נהנינו מעוגות התפוזים שהגיעו עימן, ושתי הבנות בחרו לחלק לכולנו קלחי תירס טריים וטעימים! איזה כיף שבוע אחרי שבוע לאכול תירס! אבל כמובן הריקודים, הנרות והחיבוקים היו גולת הכותרת של ימי ההולדת, וכלל הילדימות נהנים להשתתף בברכות ומתרגשים מקישוט הכיתה, הכיסא ובנות יום ההולדת.
 
-מזל טוב לאלה ולעמית שלנו!<br/>
+מזל טוב לאלה ולעמית שלנו!<br>
 
 # הפינה של אטרף
 
@@ -86,7 +86,7 @@ date: '2020-02-01T19:07:57+02:00'
 
 [אילו הייתי](<https://www.youtube.com/watch?v=aM856Z3t_l0 >) של דתיה בן דור: בשיר אנחנו הופכים לקוסמים המנופפים בשרביט הקסמים שלהם כאשר המקצב של המוסיקה משתנה גם אנחנו משתנים יחד איתה. פעם הופכים לפרפר המתעופף לאיטו בין הפרחים ובפעם לחמור המקפץ מהר מהר. פעם לסרטן מתרוצץ כשבקצות עדיו צבטות ופעם לצב הזוחל לאט לאט על האדמה.
 
-[שיר הפופקורן](https://www.youtube.com/watch?v=DBYjZTdrJlA): אנחנו זזים במרחב לצלילי השיר בצורה חופשית, אך ברגע שהמוסיקה נעצרת, אנחנו חוזרים מהר מהר למקום! מה עושים אם חבר או חברה לא שמו לב שהשיר נעצר או לא מצאו מקום? מעודדים אותם לחזור ולמצוא מקום. מדהים כמה הילדמות אוהבים לשתף פעולה ונהנים לעזור לחברים שלהם ומיד זזים קצת ומזמינים את החבר או החברה לשבת לידם. <br/>
+[שיר הפופקורן](https://www.youtube.com/watch?v=DBYjZTdrJlA): אנחנו זזים במרחב לצלילי השיר בצורה חופשית, אך ברגע שהמוסיקה נעצרת, אנחנו חוזרים מהר מהר למקום! מה עושים אם חבר או חברה לא שמו לב שהשיר נעצר או לא מצאו מקום? מעודדים אותם לחזור ולמצוא מקום. מדהים כמה הילדמות אוהבים לשתף פעולה ונהנים לעזור לחברים שלהם ומיד זזים קצת ומזמינים את החבר או החברה לשבת לידם. <br>
 
 # הפינה של כוורת
 
@@ -106,7 +106,7 @@ date: '2020-02-01T19:07:57+02:00'
 
 **מאחלות שבוע מלא שקט וחמימות **
 
-**ויקה, מיכל, טניה וימית**  <br/>
+**ויקה, מיכל, טניה וימית**  <br>
 
 ## שכבת הבוגרים
 
