--- a/content/weekly-update/נייר-נייר-ועוד-נייר.md
+++ b/content/weekly-update/נייר-נייר-ועוד-נייר.md
@@ -24,7 +24,7 @@ date: '2020-07-04T16:50:57+03:00'
 
 **שבת של שמש וכיף**
 
-**אחינועם וכל צוות ילדי הטבע הדמוקרטי**<br/>
+**אחינועם וכל צוות ילדי הטבע הדמוקרטי**<br>
 
 ## שכבת הצעירים
 
