--- a/content/weekly-update/סתיו-שהתבלבל.md
+++ b/content/weekly-update/סתיו-שהתבלבל.md
@@ -28,9 +28,9 @@ date: '2019-11-09T20:10:53+02:00'
 
 **אחינועם. 
 **
-<br/>
+<br>
 
-<br/>
+<br>
 <br>
 
 <br>
@@ -44,7 +44,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 
 אחרי כחודשיים מתחילת השנה, הגיע הזמן להתחיל לחשוף ולשתף אתכם, הורים יקרים, לעולם התוכן החינוכי בגן שלנו. 
-<br/>
+<br>
 השבוע אשמח לספר לכם מעט לכם העבודה שנעשית ״מאחורי הקלעים״ והדרך בא היא באה לידי ביטוי ביום יום שלנו בגן.
 
   
@@ -62,7 +62,7 @@ date: '2019-11-09T20:10:53+02:00'
  כך, בכל שבוע אנחנו מתמקדות ומתעמקות עם הילדימות בתת נושא אחד.
 
 הלמידה נעשית מן המוחשי אל המופשט. כלומר נתעמק אך ורק בנושאים אותם הילדימות יכולים לחוש ולראות. 
-<br/>
+<br>
 למשל החודש לקחנו אלמנטים מתוך הסתיו שאותם הילדימות כבר יכולים לראות סביבם בכל מקום ודרכם נלמד על העונה. 
 
 כפי שכבר אמרנו בעבר התכנים מועברים לאורך כל היום ולא רק בשעת המפגש או בחלונות המוקדשים ללמידה פדגוגית. למשל, במסגרת הנושא "סתיו" אנחנו יכולות להתמקד בתת הנושא "רוח". בחברותא נקיים שיח על הנושא, במפגש נלמד בצורת שירים, תנועה וחפצים רלוונטיים ובחצר נסב את תשומת ליבם של הילדימות לצלייה ולשבשבת שהרוח מניעה. כך אנחנו יוצרות למידת 360 על הנושא שמועברת במגוון מסגרות ונתפסת באמצעות מגוון החושים שלנו. 
@@ -78,7 +78,7 @@ date: '2019-11-09T20:10:53+02:00'
 ללא ספק הסתיו הוא עונה מבלבלת במיוחד. בבוקר קר ובצהריים חם. 
 
 במהלך החברותא, שזוהי נקודת הפתיחה של היום שלנו, שמנו לב שאנחנו לובשים בגדים ארוכים, נועלים נעליים סגורות ואפילו גורבים גרביים.
-<br/>
+<br>
 מה התפקיד של כל הפרטי לבוש האלה? לחמם אותנו כשאנחנו מרגישים שקר לנו. מה עושים כשחם? מתחילים לפשוט ולחלוץ. 
 
 מעבר לתרגול המוטורי של חליצת נעליים והורדת גרביים, ניהלנו שיח סביב התחושה - מה אנחנו מרגישים עכשיו? אם עדיין קריר נישאר עם הבגדים הארוכים ואם כבר חם לנו אפשר לפשוט את השכבה העליונה כדי שיהיה לנו יותר נעים. 
@@ -106,7 +106,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 
 בחצר מצאנו ערימה של עלים שנשרו מהעץ, העלים היו חומים- צהובים, יבשים, מרשרשרים וקרועים. לא רחוק מהם הייתה עוד ערימה של עלים ירוקים, נעימים ורכים עם ריח טרי ורענן. 
-<br/>
+<br>
 מיינו את העלים השונים ל 2 קבוצות , יבשים וטריים, דיברנו על ההבדלים במרקם שלהם, הריחות , הצבעים וכמובן הגדלים… 
 
 שרנו יחדיו את השיר ״[ברוח הסתיו עלים](https://youtu.be/jD42YsAAJS0) קלים מעל העצים נושרים נופלים…״  
@@ -154,7 +154,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 
 ביום שישי חגגנו אירוע מיוחד לגן! לטיטי הבובה שלנו היה יום הולדת
-<br/>
+<br>
 הכרנו את טקס היום הולדת, את ארגז ההפתעות, השרביט הצבעונית, הגלימה הנוצצת וכמובן את שלט היום הולדת!
 
 הילדימות כל כך שמחו והתרגשו עבור טיטי. פינקו אותה בחיבוקים ונשיקות, רקדו ומחאו לה המון כפיים!  
@@ -204,7 +204,7 @@ date: '2019-11-09T20:10:53+02:00'
 המצאנו גם שירים למלפפון ולסלק ...והילדימות התחברו מאוד לשירים (וגם אכלו את הירקות) 
 
 
-<br/>
+<br>
 ומה עוד? שמנו לב שהבקרים שלנו נראים מעט אחרת ושאבא ואמא התחילו להלביש אותנו בבגדים ארוכים ונעליים סגורות. אבל מזג האוויר עדיין הפכפך והקור של הבוקר לעיתים מתחלף בחום בצהריים- אז מה נעשה? נחלוץ נעליים! אנחנו עדיין לא ממש יודעים לנעול נעליים לבד, אבל אנחנו בהחלט יכולים כבר לחלוץ אותן! אז השבוע ניצלנו את מזג האוויר ההפכפך של הסתיו כדי ללמד את הילדימות לחלוץ נעליים וגרביים לבד.  
 
 בגן שלנו יש עקרון חינוכי שנקרא "פירוק פעולות". כל פעולה שאנחנו מלמדות את הילדימות מורכבת ממספר שלבים שיש ללמוד אותם, למשל: פתיחת הסקוצ'ים, הורדת הנעל והורדת הגרביים. בכל שלב אנחנו מתמקדות עם הילדים בדרך הנכונה לעשות זאת כדי ללמד בצורה בונה בטחון ולא ליצור תחושת אכזבה או אי הצלחה בקרב הילדים. (לדוגמא למשוך את הסקוצ' מהקצה ולחלוץ את הנעל באמצעות החזקת העקב). 
@@ -252,7 +252,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 
 במקביל אנחנו שואפות לייצר אקלים רגוע ונינוח שמאפשר מקום ביטוי לכלל הילדימות בגן. 
-<br/>
+<br>
 התגובה שלנו לנשיכה אינה כעס או עונש אלא מתן כלים ותגובה המהירה כי זו אינה התנהגות מקובלת. הילד הנושך אינו פושע. 
 
 
@@ -276,9 +276,9 @@ date: '2019-11-09T20:10:53+02:00'
 
 
 1. כאשר אתם מביאים את הסדינים ביום ראשון אנא וודאו שיש שמות על הסדינים במקום בולט במרכז הסדין והניחו אותו בארגז של קבוצתכם. על כל ארגז ישנו שם - שימו לב בבקשה (לאחרונה יש לא מעט בלבולים). כך גם לגבי כל חפץ אחר חדש שאתם מביאים לגן-  נעליים חדשות? תתחדשו! רק אל תשכחו לכתוב שם כדי שנוכל לזהות!
-<br/>
+<br>
 
-<br/>
+<br>
 2. מזכירות שוב להלביש את הילדימות בשיטת הבצל - שכבה קצרה ומעליה ארוכה. כך נוכל באמת לנהל שיח עם הילדימות על התחושות שלהם ולהציע להם פתרון שיקל עליהם - כמו הורדת השכבה הארוכה. 
 
 
@@ -304,7 +304,7 @@ date: '2019-11-09T20:10:53+02:00'
 ## 
 
 **עדכון על סתיו שהתבלבל
-*<br/>
+*<br>
 
 בשבועיים האחרונים עבדנו על חידוד החושים שלנו: שבוע שעבר בזכות הסתיו שהגיע לבקר, ובשבוע האחרון בזכות ה"אין סתיו", שהחליט שהוא נודד כנראה למקום אחר. 
 
@@ -344,13 +344,13 @@ date: '2019-11-09T20:10:53+02:00'
 **
 
 רוח הגיעה אלינו במגוון דרכים- פתחנו חלונות ואת דלת החצר, התעופפנו לנו בכיתה [לצלילי רוח חזקה](https://www.youtube.com/watch?v=yY14R_amuTM&t=104s) וחלשה וזזנו לפי קצב המנגינה. 
-<br/>
+<br>
 
 
 הכרנו את דקלום הרוח:
 
 > "רוח, רוח, רוח, רוח 
-><br/>
+><br>
 > בפרדס נפל תפוח 
 >
 > הוא נפל מראש העץ 
@@ -362,7 +362,7 @@ date: '2019-11-09T20:10:53+02:00'
 > על תפוח שנפל" 
 
 
-<br/>
+<br>
 ששש....ש ק ט מי יכול לשמוע את הרוח? 
 
 בדקנו עד כמה נקיות האוזניים שלנו כדי לשמוע את צלילי הרוח, וגילינו שכדי לשמוע טוב אנחנו צריכים גם לשמור על שקט... כשהיינו כולנו בשקט הצלחנו לשמוע את המנוע של המזגן שפעל. שאלנו האם בכלל צריך מזגן? פתאום הצלחנו לשמוע המון דברים. את ויקה מדברת עם הצעירים בחצר, את החברים שנמצאים במבואה. אפילו גילינו שמאחורי קיר המפגש נמצא ארגז החול והצלחנו לשמוע חברים מהצעירים מכינים שם מטעמים.
@@ -372,7 +372,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 **ניסוי ברוח  
 **
-<br/>
+<br>
 המאוורר הגיע לכיתה! חיפשנו שקע ותקע ושאלנו מי מתחבר למה ואיך? ולמה השקעים בקיר כל כך גבוהים? אה כדי שלא נוכל להכניס בטעות אצבעות, זה מאוד מסוכן.. אחרי שדיברנו על כללי הבטיחות ישבנו מסביב למאוור ועשינו ניסוי. מתוך קופסא הוצאנו פריטים, חלקם קלים וחלקם כבדים.. את מי מהם תעיף הרוח של המאוורר? את הפוני שלנו בטוח, ומה עם הספר? והנוצה? והמגנט.. יכולנו לראות ולבחון האם הרוח משפיעה על חפצים ואביזרים שונים ומשונים בהתאם לגודל ולמשקל שלהם. 
 
 
@@ -406,7 +406,7 @@ date: '2019-11-09T20:10:53+02:00'
 <br>
 
 **הצצה לסדר יום, והפעם בפינתנו LUNCH TIME
-*<br/>
+*<br>
 
 
 
@@ -432,7 +432,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 
 
-3<br/>לחן חצי עיגול- בשולחנות חצאי העיגול אנחנו מרגישים כמו בבר תל אביבי טיפוסי. המחנכת בתפקיד הברמנית, וכיאה לברמנית היא שואלת המון שאלות.  "מה כדאי לעשות אם האוכל חם עדיין?" מתי נמזוג את התוספת?", האם ניסינו לערבב את המרק עם האורז?" אנחנו משקפות לילדימות ומתווכות להם את ארוחת הצהריים במטרה לעודד הרגלי אכילה עצמאיים וקבלת החלטות שתטיב עמנו. 
+3<br>לחן חצי עיגול- בשולחנות חצאי העיגול אנחנו מרגישים כמו בבר תל אביבי טיפוסי. המחנכת בתפקיד הברמנית, וכיאה לברמנית היא שואלת המון שאלות.  "מה כדאי לעשות אם האוכל חם עדיין?" מתי נמזוג את התוספת?", האם ניסינו לערבב את המרק עם האורז?" אנחנו משקפות לילדימות ומתווכות להם את ארוחת הצהריים במטרה לעודד הרגלי אכילה עצמאיים וקבלת החלטות שתטיב עמנו. 
 
 
 
@@ -482,7 +482,7 @@ date: '2019-11-09T20:10:53+02:00'
 
 ימי הולדת קורים השנה באופן קבוע בימי שלישי. לאט לאט הילדימות יהפכו את זה לנוהל קבוע וזה עתיד להפוך לסממן נוסף להיכרות עם ימי השבוע. 
 
-מ<br/>ם שזוכרים, שנה שעברה חגיגת יום ההולדת הייתה מרוכזת ברובה לזמן המפגש. בשנת הבוגרים המפגש הוא שיא החגיגה, אך יום ההולדת הוא אירוע של יום שלם, שמושתת על ערך הבחירה. 
+מ<br>ם שזוכרים, שנה שעברה חגיגת יום ההולדת הייתה מרוכזת ברובה לזמן המפגש. בשנת הבוגרים המפגש הוא שיא החגיגה, אך יום ההולדת הוא אירוע של יום שלם, שמושתת על ערך הבחירה. 
 
 אנחנו מתחילים את הבוקר בהכנה משותפת של עוגת יום ההולדת בכיתה, אותה החבר/ה בחרו מבעוד מועד. ילד יום ההולדת אחראי על הכנסת העוגה לתנור במטבח יחד עם חן, כך אנחנו לומדים להכיר גם את החלל הזה של הגן, את המשמעות, הסכנות וההנאות בו. חשוב לציין שהמטבח לא נגיש לנו באופן חופשי ביום- יום, רק לצורך עבודה פרטנית ממוקדת. 
 
