--- a/content/weekly-update/פורים-בסימן-כובעים-וחיידקים.md
+++ b/content/weekly-update/פורים-בסימן-כובעים-וחיידקים.md
@@ -109,7 +109,7 @@ date: '2020-03-15T18:32:43+02:00'
 
 לכבוד משתנה פורים, אפילו הפנקייקים התחפשו, ונצבעו בורוד הודות לסלק שהתווסף לו לבלילה. את הפנקייקים קישטנו בסירופ תמרים, פירות ואף מעט קוקוס מתקתק. 
 
-# <br/>הפינה של אטרף
+# <br>הפינה של אטרף
 
 בשבוע מבלבל שכזה, בין ימי הבחירות לחופשת הפורים, יום בגן - יום בבית, החלטנו להתחבר לחוויה המוסיקלית שלנו בצורה אסוציאטיבית.
 
@@ -123,7 +123,7 @@ date: '2020-03-15T18:32:43+02:00'
 
 ואם כבר חיקוי ודימוי אז שיר משעשע חדש שהכרנו תוך כדי משחק שהתחבר לנו באופן טבעי לסיפורו של מוכר הכובעים - [חמישה קופים קפצו על המיטה](https://www.youtube.com/watch?v=3SjMQpJNm9s).
 
-# <br/>הפינה של כוורת
+# <br>הפינה של כוורת
 
 בשבועיים הרגישים של פורים והבחירות השתדלנו לעגן את הפעילויות שלנו במוכר ובנוח, ולהוסיף מדי יום רק משהו חדש קטן, כדי לחזק את הביטחון של הילדימות לקראת פורים. מיכל חבשה מדי יום את הכובע המצחיק עם המחושים והעיניים, והגיעה עם שק כובעים גדול – "כובעים למכירה! כובעים למכירה!" הילדימות נהנו למדוד כובעים שונים, ויחדיו למדנו למדוד, לעשות סיבוב קטן עם הכובע, ולהעביר גם לחברימות שלנו שגם הם רצו למדוד את הכובעים השונים. הכי פופולרית הייתה המגבעת, שהייתה קצת גדולה ואפשר היה לשחק איתה "קו-קו!", כי היא כיסתה לילדימות את רוב הפרצוף...
 
@@ -131,7 +131,7 @@ date: '2020-03-15T18:32:43+02:00'
 
 **שיהיה לנו שבוע בריא וכמה שיותר יחד,**
 
-**ויקה, מיכל, ימית, זיו ואלינור<br/>**
+**ויקה, מיכל, ימית, זיו ואלינור<br>**
 
 ## שכבת הבוגרים
 
