--- a/content/weekly-update/פותחים-את-שנת-תש-ף.md
+++ b/content/weekly-update/פותחים-את-שנת-תש-ף.md
@@ -12,7 +12,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 אנחנו מרגישים איך בכל יום אנחנו הופכים לקבוצה אחת, קהילה אחת, מבינים ומכירים טוב יותר, מתאימים את עצמנו אחד לשני וזה מרגש לראות. 
 
-<br/>
+<br>
 <br>
 
 **כמה הודעות של התחלה:
@@ -42,7 +42,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 
 
-7<br/>חנו מתכננים כבכל שנה הרמת כוסית קלילה לפתיחת השנה (כשנסיים את כלל ההסתגלויות) נעדכן בקרוב לגבי תאריך ושעה. 
+7<br>חנו מתכננים כבכל שנה הרמת כוסית קלילה לפתיחת השנה (כשנסיים את כלל ההסתגלויות) נעדכן בקרוב לגבי תאריך ושעה. 
 
 
 <br>
@@ -50,13 +50,13 @@ date: '2019-09-14T19:23:40+03:00'
 **שבת של מנוחה
 **
 
-<br/><br/>ם וכל צוות ילדי הטבע הדמוקרטי
+<br><br>ם וכל צוות ילדי הטבע הדמוקרטי
 **
 
 
 
 <br><br>
-<br/>
+<br>
 
 
 ## עדכון שכבת צעירים 
@@ -64,7 +64,7 @@ date: '2019-09-14T19:23:40+03:00'
 ## 
 <br>
 
-ע<br/> ראשון לשנה זו, מרגש מאוד! 
+ע<br> ראשון לשנה זו, מרגש מאוד! 
 
 לפני שבועיים הגן היה מקום חדש וזר לחלוטין, חלק ניכר מהילדימות לא נחשפו מעולם למסגרת חינוכית מסוג כזה או אחר, לא כולם נפרדו מהורים לפרק זמן ממושך וחלק הגיעו ממסגרות קטנות.
 
@@ -84,7 +84,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 הגן שלנו הוא מבנה גדול ורחב, מלא במשחקים, כיתות שונות, לא מעט אנשי צוות וילדימות מתרוצצים. 
 
-ב<br/>ה זה נראה מאוד כיף, כמו לונה פארק. הרבה אטרקציות ומתקנים מעניינים, אנשים מחייכים אלינו מכל כיוון, ההורים שלנו מלווים אותנו לכל מקום, בסך הכל חוויה נהדרת! 
+ב<br>ה זה נראה מאוד כיף, כמו לונה פארק. הרבה אטרקציות ומתקנים מעניינים, אנשים מחייכים אלינו מכל כיוון, ההורים שלנו מלווים אותנו לכל מקום, בסך הכל חוויה נהדרת! 
 
 ברגע שההורים הולכים אנחנו נשארים לבד בתוך כל הלונה פארק הזה וזה קצת מרגיש כאילו נשארנו בלב הג׳ונגל. למרות שאנחנו מוקפים באנשים חייכניים, שדואגים לנו, אנחנו עדיין לא מכירים אותם, לא סומכים עליהם לגמרי ולא מרגישים בטוחים מספיק במקום הזה עדיין. כאן למעשה מתחיל תהליך ההיכרות וההסתגלות.
 
@@ -94,7 +94,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 
 <br>
-<br/>
+<br>
 **הימים הראשונים בגן 
 **
 
@@ -120,7 +120,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 
 בזמן שתירגלתם נשימות עמוקות או הצצתם מבחוץ, ניצלנו את הזמן כדי להכיר את הילדימות שלכם טוב יותר ולעבוד על היקשרות, לבנות תחושת את הביטחון והאמון. גילינו עליהם המון דברים חדשים והצפנו את המידע והמסקנות עליהם הגענו במהלך הישיבות שנערכו בכל בצהריים.
-<br/>
+<br>
  לאחר ההיכרות התאמנו את קצב ההסתגלות לתהליך של כל ילד וילדה בהתאם לחוזקות שלהם- לעל ילד וילדה התאמנו "חליפה חינוכית אישית". מה זה אומר? 
 
 יש ילדים שקשה להם יותר בבוקר והם זקוקים למנוחה לפני שהם מתחילים להתמודד עם האתגרים הצפויים להם במהלך היום. יש ילדים שצריכים את המרחבים הפתוחים. ילדים סנסורים הנרגעים בעזרת מגע במרקמים שונים אלו ילדים שבחרו לבלות בארגז החול ובשולחנות המים. 
@@ -158,7 +158,7 @@ date: '2019-09-14T19:23:40+03:00'
 דרך חלוקת הבקבוקים הכרנו את החברים החדשים שלנו ולמדנו למי שייכים הבקבוקים שבסלסלה. ראינו שחלק מהילדימות כבר עוזרים לחברים שלהם ומגישים להם את הבקבוק שלהם. 
 
 אנחנו עדיין לא בשלב בו אנחנו מבססים את הרגלי האכילה של הילדימות כקבוצה וכיחידים, לכן ארוחת הבוקר התנהלה בסגנון חופשי וזורם: מגוון ירקות, ממרחים וחביתות חומוס נפרסו על השולחן והילדימות ישבו או עמדו סביבו ואכלו יחדיו.
-<br/>
+<br>
 המשכנו למשחק בכיתה ולאחר מכן יציאה לחצר. 
 
 הימים חמים לכן דאגנו להפסקות מים ופירות צוננים. 
@@ -178,7 +178,7 @@ date: '2019-09-14T19:23:40+03:00'
 **
 
 •	כדי לעודד את תחושת הביטחון והעצמאות של הילדים שלכם היכנסו איתם יד ביד לגן ( ולא מחובקים על הידיים)-זאת פעולה קטנה וסמלית שמעודדת את הילדימות לקחת צעד קדימה וכאמור משדרת להם תחושה של בטחון ושייכות לגן. 
-<br/>
+<br>
 ייתכן וזה ישמע לכם קצת מוזר איך שימו את עצמכם במקומם. כאשר נושאים אתכם על הידיים אתם מאבדים שליטה. מישהו מחליט לאן הולכים, מה עושים ומתי . כאשר תתנו לילדימות להיכנס יחד איתכם לגן אתם תעבירו להם שזהו מקום בטוח, מוגן, שאתם סומכים עלינו ושהילדימות שלכם מספיק עצמאיים כדי לעשות זאת בעצמם
 
 
@@ -186,7 +186,7 @@ date: '2019-09-14T19:23:40+03:00'
 •	באותו הקשר, פרידות בוקר . תיצרו טקס בוקר קבוע כאשר הילדימות שותפים לתהליך הפרידה שאותה אתם מנהלים-  נכנסים לגן ומנופפים לשלום לכל הגננות, ממשיכים לקיפול העגלה, תליית התיק על המתלה ובקבוק בסלסלה. כיצד תנהלו אותה? ע״י שאילת שאלות כמו ״איפה התיק שלך אמור להיות תלוי?״, ״היכן מניחים את הבקבוק?״, ״באיזה משחק תרצי לשחק?״ כאשר סיימתם לפזר את כל הדברים ואתם מוכנים לפרידה רק אז ניגשים לאחד מאנשי הצוות, בכל בוקר מישהי אחרת כדי לעודד תחושת ביטחון עם כל אחת מאיתנו וגם כדי לא לפתח תלות במישהי מסויימת, מאחלים ליום מקסים והולכים. 
 
 
-<br/><br/>
+<br><br>
 •	התקשורת שלכם מול המובילות. אנחנו כאן כדי לתת מענה לכל השאלות והבקשות שלכן.ם. רק במידה ונרגיש שלא נוכל לתת מענה נפנה אתכם לאחינועם או לגורם המקצועי הרלוונטי לפנייה.  מזכירה שאנחנו זמינות בכל יום עד השעה 19:00, לאחר מכן בבקשה כפדו את הזמן האישי שלנו.     
 
 •	שימו לב להערה של אחינועם בפתיחת העדכון השבועי בעניין שעות הגעה ואיסוף  (רלוונטית לכולם אלא אם כן הוגדר לכם אחרת באופו אישי).
@@ -200,7 +200,7 @@ date: '2019-09-14T19:23:40+03:00'
 **
 
 **ויקה, טניה, תמר, אורטל, אחי, צחי והדר. 
-*<br/>
+*<br>
 
 
 
@@ -220,7 +220,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 
 <br>
-<br/>
+<br>
 **שנת הצעירים חלפה עברה לה והנה אנחנו כבר... ב ו ג ר י ם. 
 **
 
@@ -240,7 +240,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 
 
-<br/>
+<br>
 <br>
 
 **שיעור בחברות ואמפתיה
@@ -258,7 +258,7 @@ date: '2019-09-14T19:23:40+03:00'
 
  
 
-ה<br/>לנו עובד כקהילה, וככזה היה לנו חשוב לשתף את הילדימות בשינוי המשמעותי ביותר שקרה בגן בשבועיים האחרונים, הצטרפותם של שכבת צעירים חדשה לגמרי. השיח היה תמידי, הילדימות התעניינו מאוד בצעירים החדשים, איפה הם נמצאים, מה הם עושים? גילינו שמה שעוזר לחלק מהקטנטנים החדשים הוא פשוט לראות את הבוגרים משחקים לידם, וזה הפך להיות עניין שבשגרה. גם בחצר יכולנו לראות מחוות קטנות ומקסימות שהבוגרים הציעו לקטנטנים לשחק איתם, הביאו להם משחק שחפצו בו. פשוט היו ערים להם וראו אותם, בצורה הכי אותנטית שאפשר. בתהליך הזה כולם מרוויחים, גם הילדימות שנמצאים בצד הנותן והמעניק וגם אלה שנמצאים, כרגע, בצד המקבל. אלה כמו אלה מפתחים את "שרירי החברות" והיכולות הבינאישיות שלהם. 
+ה<br>לנו עובד כקהילה, וככזה היה לנו חשוב לשתף את הילדימות בשינוי המשמעותי ביותר שקרה בגן בשבועיים האחרונים, הצטרפותם של שכבת צעירים חדשה לגמרי. השיח היה תמידי, הילדימות התעניינו מאוד בצעירים החדשים, איפה הם נמצאים, מה הם עושים? גילינו שמה שעוזר לחלק מהקטנטנים החדשים הוא פשוט לראות את הבוגרים משחקים לידם, וזה הפך להיות עניין שבשגרה. גם בחצר יכולנו לראות מחוות קטנות ומקסימות שהבוגרים הציעו לקטנטנים לשחק איתם, הביאו להם משחק שחפצו בו. פשוט היו ערים להם וראו אותם, בצורה הכי אותנטית שאפשר. בתהליך הזה כולם מרוויחים, גם הילדימות שנמצאים בצד הנותן והמעניק וגם אלה שנמצאים, כרגע, בצד המקבל. אלה כמו אלה מפתחים את "שרירי החברות" והיכולות הבינאישיות שלהם. 
 
  
 
@@ -286,7 +286,7 @@ date: '2019-09-14T19:23:40+03:00'
 <br>
 
 **מפגש
-*<br/>
+*<br>
 
 המפגש הוא כלי עבורנו לחיזוק הקבוצתיות והעצמה אישית של הילדימות,  המפגש הוא גם הזדמנות להעמקת השיח והלמידה בנושאים מסוימים, מחיי היום-יום ובכלל. חשוב לציין שבשונה מגנים מסורתיים אנחנו לא מקדישים את המפגשים רק ללמידת חגי השנה, מנהגים וכו', כל אלו הם דברים שקיימים בגן, אך מונגשים לילדימות קצת אחרת. 
 
@@ -314,7 +314,7 @@ date: '2019-09-14T19:23:40+03:00'
 
 
 
-<br/>
+<br>
 <br>
 
 
