--- a/content/weekly-update/שבוע-אהבה-וגאווה-בגן-שלנו.md
+++ b/content/weekly-update/שבוע-אהבה-וגאווה-בגן-שלנו.md
@@ -122,7 +122,7 @@ date: '2019-06-15T20:20:04+03:00'
 במעגל שלנו יש מקום לכולם... אנחנו מצטרפים בתורנו ומושיטים יד לחבר/ה. אנחנו שומרים אחד על השנייה זה אומר שלא משתוללים אלא עומד ברוגע ואוחזים ביד של החבר/ה. 
 
 לאט לאט החברימות מצטרפים והמעגל שלנו הולך וגדל... התקרבנו לאט לאט פנימה והלכנו אחורה והתרחקנו, ראינו איך המעגל הופך מגדול לקטן ומקטן לגדול. 
-<br/>
+<br>
 ישבנו יחדיו במעגל, דיברנו על דברים שאנחנו אוהבים, למשל לאכול ארטיק או להיפגש עם חבר או חברה מהגן בגינה. 
 
 וסיכמנו הכל בשיר " [אני אוהב"/הכבש השישה עשר](<https://www.youtube.com/watch?v=vC1T5vkLs-k \>). 
@@ -134,7 +134,7 @@ date: '2019-06-15T20:20:04+03:00'
 <br>
 
 
-<br/>
+<br>
 **פעילות בקבוצות קטנות 
 **
 
@@ -150,7 +150,7 @@ date: '2019-06-15T20:20:04+03:00'
 **
 
 ביום שישי חגגנו את חג הגאווה והאהבה. 
-<br/>
+<br>
 אירי מקבוצת הלו יעקב (הבוגרים) הגיעה לספר לנו על הדגל המיוחד שאיתו היא הגיעה לגן. דגל צבעוני שבו מנפנפים גבוה באוויר כאשר הולכים למצעד אי שם ליד הים. הדגל מסמל את היכולת שלנו לקבל את כל האנשים כשווים אחד לשניה.
 
 אם כבר אנחנו מדברים בצבעים אז חנצ'וק האלופה פינקה אותנו בארוחת בוקר חגיגית במיוחד והפעם פנקייקים ורודים! פנקייק סלק שאותו טבלנו בטחינה עם סילאן (הצלחה מסחררת!) וזאת כמובן לצד הירקות והממרחים הקבועים.
@@ -158,7 +158,7 @@ date: '2019-06-15T20:20:04+03:00'
 לאחר מפגש שבו שרנו ורקדנו בזוגות לצלילי [שירו של בוב מארלי](https://www.youtube.com/watch?v=vdB-8eLEW8g)  ישבנו להתפנק ואכלנו אבטיח ומלון קפואים על הדק יחד עם קבוצת שולה. 
 
 משם המשכנו למסיבה הגדולה שבה הייתה עמדת איפור פנים של אחי והכנת דגלים צבעוניים עם חולוד . חוץ מזה לשנו בצק צבעוני ומנצנץ עם אדריאן, רקדנו ריקודים מקפיצים עם אורטל, שירז ואלינור בחצר ושחקנו במשחקי רצפה מיוחדים וצבעוניים איתי ועם דור בכיתה ממוזגת! 
-<br/>
+<br>
 החיבור בין הצעירים לבוגרים עובד פשוט נהדר! הילדימות נעו בחופשיות בין העמדות השונות, רקדו, בנו, לשו, הדביקו וציירו ובעיקר אהבו! 
 
 <br>
@@ -170,7 +170,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 
 
-<<br/>
+<<br>
 
 **לא תאמינו אבל סוף שנה ואנחנו כבר לקראת מסיבת הסיום! 
 **
@@ -198,7 +198,7 @@ date: '2019-06-15T20:20:04+03:00'
 •	כמה כיף לקבל מכם תמונות ממפגשים אחה"צ! כל הכבוד המשיכו כך! 
 
 •	יום ראשון- לא לשכוח בקבוקי מים מלאים. 
-<br/>
+<br>
 
 
 
@@ -220,7 +220,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 **חזרנו מחופשת השבועות לשבוע קצרצר, צבעוני ומלא באהבה:)  
 **
-<br/>
+<br>
 
 
 הילדימות פינקו אותנו בסיפורים וחוויות מהחופשה שלכם, ים, בריכה, טיולים.. נשמע שעשיתם כיף חיים!
@@ -316,7 +316,7 @@ date: '2019-06-15T20:20:04+03:00'
 אפשר להגיד לו שלום, לתת לו כיף של אלופים 
 
 אבל חיבוק ונשיקה זה משהו שאנחנו חייבים קודם לשאול את החבר האם רוצה...
-<br/>
+<br>
 דידי סיפר לנו על היום שלו בגן, על הדברים שהוא אוהב לעשות ואנחנו הזדהינו מאוד
 
 הוא שיתף אותנו בכמה חוויות אישיות בהן  חברה לקחה ממנו את המשחק בו שיחק והוא מצידו כעס מאוד...
@@ -338,7 +338,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 הבנו שיש הרבה דרכים לפתור בעיה, וסליחה היא לא תמיד אחת מהן.
 
-<br/>
+<br>
 <br>
 
 **שיר שהוא סיפור. על אהבה, אמפתיה וחברות 
@@ -350,7 +350,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 החברים התרגשו לגלות שמאחורי כל שיר יש כותב, כמו של ספר
 
-ומ<br/>ת חשיבה עלילה דמויות... כמו סיפור קצר 
+ומ<br>ת חשיבה עלילה דמויות... כמו סיפור קצר 
 
 הקשבנו לשיר יוסי של חבר, של הכבש השישה עשר
 
@@ -382,7 +382,7 @@ date: '2019-06-15T20:20:04+03:00'
 <br>
 
 **כמה דברים אפשר לעשות במעגל 
-*<br/>
+*<br>
 
 
 
@@ -394,7 +394,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 מעגל העצמה שנותן לנו המון כוח להמשך היום שלנו:) 
 
-ג<br/>חק במעגל זה כיף לא פחות!
+ג<br>חק במעגל זה כיף לא פחות!
 
 בחצר שיחקנו את המשחק מי ראה את הגבינה של העכבר... הגבינה מסתתרת מאחורי אחד החתולים במעגל.  
 
@@ -418,7 +418,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 
 **שישי של גאווה ואהבה LOVE IS LOVE
-*<br/>
+*<br>
 
 סיימנו את השבוע שלנו בארוחת בוקר עם פנקייקים ורודים מאת חן האלופה
 
@@ -426,7 +426,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 ומסיבת חצר אחת ענקית שלא נופלת ממסיבת הגאווה בצ'ארלס קלור. 
 
-<br/>
+<br>
 <br>
 
 **הודעות ועדכונים 
@@ -462,7 +462,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 השבוע היה שבוע ברוח האהבה והגאווה. 
 
-א<br/>לעצמנו ואהבה לסובבים אותנו, קבלת השונה מאיתנו ואהבת השוני וההבנה שהגיוון והשוני הופך את החברה שלנו למעניינת יותר וטובה יותר!
+א<br>לעצמנו ואהבה לסובבים אותנו, קבלת השונה מאיתנו ואהבת השוני וההבנה שהגיוון והשוני הופך את החברה שלנו למעניינת יותר וטובה יותר!
 
 
 
@@ -478,7 +478,7 @@ date: '2019-06-15T20:20:04+03:00'
 אנחנו מרגישים תלתלים גדולים או תלתלים קטנים? 
 
 השיער שלנו חלק לגמרי או קצת גלי?
-<br/>
+<br>
 על אחד הקירות הריקים בכיתה תלינו ציור של תלתל, קראנו לכל החברים שמרגישים תלתלים בשיער להגיע לקיר בספירה עד 5... החברים המתולתלים רצו לקיר ונעמדו, בין החברים שמנו לב לסוגים השונים של התלתלים, ללני ועידו תלתלים קטנים וקצרים, ואילו לליאו ואלונה תלתלים ארוכים יותר... וראינו שגם בין התלתלים התגנבו כמה חברים עם שיער חלק! קורה שמתבלבלים, ביקשנו שוב להסב את תשומת הלב לתחושה של השיער  והחברים עם השיער החל חזרו לשבת.
 
 ועכשיו.... ההיפך! שורה של חברים עם שיער חלק נעמדה וגם ביניהם שמנו לב לשוני! כמובן שבין החברים היו כמה שלא בטוחים וציינו זאת, לתומר ולביא יש גם שיער חלק וגם קצת שיער מתולתל.
@@ -518,7 +518,7 @@ date: '2019-06-15T20:20:04+03:00'
 הראינו לחברים את דגל הגאווה, ואמרנו שהיום בחגיגות הדגל הזה מתנוסס לו בתל אביב, זה דגל הגאווה, התייחסנו בעיקר לצבעים שלו ולשוני, כל הצבעים יוצרים קשת אחת מיוחדת! החברים נורא התלהבו מהצבעוניות של הדגל, ואף החליטו לשחק במיוני צבעים באמצעותו.
 
 החגיגה התחילה והחברים יצאו לשחק ולחגוג עם שאר חברי הגן, הייתה יצירת דגלונים וכתרים צבעוניים, בצק צבעוני ונוצץ, מוזיקה חגיגית ועמדת איפור צבעונית.
-<br/>
+<br>
 התרגשנו לראות את החברים חוגגים גם הם את האירוע המיוחד הזה, במיוחד אחרי שהבינו את העקרונות החשובים שעומדים מאחוריו.
 
 
@@ -550,7 +550,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 אם לחתול לא היה כל כך נעים כשכל החיות התיישבו לו על המרבד, מה הוא היה יכול לעשות במקום לגרש אותם בכעס? ארבל הציע שאפשר להגיד שזה לא נעים לו.
 
-וכמ<br/> אחרי הדיבור על הספר, דיברנו על החיים האמיתיים והשוואנו את מה שקרה בספר למשחק של הילדים.
+וכמ<br> אחרי הדיבור על הספר, דיברנו על החיים האמיתיים והשוואנו את מה שקרה בספר למשחק של הילדים.
 
 ליאו סיפר לנו שבאותו בוקר כשרק הגיע לגן הוא העדיף לשחק לבד.
 
@@ -568,7 +568,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 <br>
 
-**<br/> – בואו ונשתול!
+**<br> – בואו ונשתול!
 **
 
 בזמן החצר אספנו את החברים מהלו יעקב ותקווה לרחבת הדק כדי לשתול ולטפל בעציצים שלנו.
@@ -576,7 +576,7 @@ date: '2019-06-15T20:20:04+03:00'
 הבאנו דלי מים, אתי חפירה ואחת מהאדניות.
 
 סיפרנו לחברים שהחום גורם לנו להזיע ולהתייבש, וכך גם הצמחים מרגישים, לכן צריכים לשים לב יותר ולטפל בהם.
-<br/>
+<br>
 שמנו לב לצמחים באדנית וראינו שחלקם מאוד מיובשים. 
 
 אחד אחד החברים, הוציאו את העלים היבשים שנפלו ומפריעים לצמחים לצמוח, איווררנו את האדמה והוצאנו צמחים שכבר לא גודלים. זו הייתה הזדמנות לבחון את שורשי הצמחים, יכולנו לראות שמתחת לאדמה השורשים מסתעפים ומתפזרים כדי לשאוב את המים, ומשם גדל לו גבעול.
@@ -588,7 +588,7 @@ date: '2019-06-15T20:20:04+03:00'
 לאחר שסיימנו אספנו ביחד את העלים היבשים והחזרנו את כל הכלים במקום, חלקם נזרקו וחלקם עברו למשחק מהנה בארגז החול. היה מקסים ומלמד.
 
 
-<br/>
+<br>
 **מוזיקה ללב היא חודרת
 **
 
@@ -688,7 +688,7 @@ date: '2019-06-15T20:20:04+03:00'
 מי יודע מי אני? אורטל קראו כולם בקול…. איך ידעתם? הראסטות! הן מייחדות אותי, הן סימן חיצוני שיכול לעזור לזהות אותי, רק אותי.
 
 מה מייחד אתכן/ם ? הילדימות התבוננו במראה ולאחר מכן קיבלו דף לבן.
-<br/>
+<br>
 בזכות איזה איבר ידעו מי אתם/ן?
 
 הילדימות בחרו פה, אף, שיער או אוזן מיוחדת…
@@ -702,7 +702,7 @@ date: '2019-06-15T20:20:04+03:00'
 גילינו שלמרות שלכולנו יש אף הם שונים אחד עגול, אחד ארוך, אחד קטן …
 
 
-<br/>
+<br>
 השיח בתקופה האחרונה בחצר מדבר על הכוחות המיוחדים שלנו על היכולות שלנו ומידי פעם יש התנצחויות קטנות שנשמעות בכל פינה.
 
 כולם רוצים להוכיח שהם הכי טובים.
@@ -736,7 +736,7 @@ date: '2019-06-15T20:20:04+03:00'
 אבינועם - מפקד העולם.
 
 שקד- אני רוכב על אופנוע.
-<br/>
+<br>
 גיא- אלוף הבוץ בארגז החול.
 
 אנה - אלופת עולם באיסוף צעצועים.
@@ -758,7 +758,7 @@ date: '2019-06-15T20:20:04+03:00'
 <br>
 
 
-<br/>
+<br>
 [**עילי בוטנר -שווים
 **](https://youtu.be/lf72w9CMB-I)
 
@@ -776,7 +776,7 @@ date: '2019-06-15T20:20:04+03:00'
 
 <br>
 
-<br/>
+<br>
 
 **ספרי השבוע- 
 **
