--- a/content/weekly-update/שבוע-הספר-על-כריכות-ומה-שביניהן.md
+++ b/content/weekly-update/שבוע-הספר-על-כריכות-ומה-שביניהן.md
@@ -60,7 +60,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **שבוע רגוע ושקט,**
 
-**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי<br/>**
+**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי<br>**
 
 ## שכבת הצעירים
 
@@ -90,7 +90,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 במקביל, המשכנו לחקור את המים: לקחנו כל מיני חפצים, ופיילות מלאות מים. אחד אחד הנחנו את החפצים והתבוננו: האם הם צפים על המים? או שוקעים לתחתית? החזקנו את החפצים בידיים, והרגשנו שדברים כבדים שוקעים יותר מדברים קלים. חיפשנו בחצר עוד דברים שאפשר לנסות להכניס למים ולראות מה קורה איתם. ומה קורה כשמכניסים בקבוקון ריק פנימה? בהתחלה הוא צף, אבל אם לוחצים עליו, רואים שהוא עושה בק-בק-בק, יוצאות ממנו המון בועות, ואז הוא שוקע!
 
-בשבוע הקרוב נמשיך להעמיק במים ובנייר וניצור עיסת נייר, ובמקביל נמשיך להעמיק בספרים עצמם ובתוכן שאפשר למצוא בהם. <br/>
+בשבוע הקרוב נמשיך להעמיק במים ובנייר וניצור עיסת נייר, ובמקביל נמשיך להעמיק בספרים עצמם ובתוכן שאפשר למצוא בהם. <br>
 
 # הפינה הצהובה
 
@@ -100,7 +100,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **מעצבים ומפסלים**
 
-במקביל, המשכנו לעבוד עם החימר, חומר נפלא שעימו אנחנו לומדים עוד ועוד. השבוע גילינו שאם נמשיך לחפור בשקע שעשינו עם האצבע, או נסובב את החימר סביב האצבע, בסוף היא תצא לנו מהצד השני ויהיה לנו חור! הילדים נהנו לעשות חורים בחימר ולהתבונן דרכם: "תראו, יש לי משקפת!". <br/>
+במקביל, המשכנו לעבוד עם החימר, חומר נפלא שעימו אנחנו לומדים עוד ועוד. השבוע גילינו שאם נמשיך לחפור בשקע שעשינו עם האצבע, או נסובב את החימר סביב האצבע, בסוף היא תצא לנו מהצד השני ויהיה לנו חור! הילדים נהנו לעשות חורים בחימר ולהתבונן דרכם: "תראו, יש לי משקפת!". <br>
 
 # הפינה הכחולה
 
@@ -114,7 +114,7 @@ date: '2020-06-27T18:03:03+03:00'
 
 **בברכת קיץ מלא מים,**
 
-**צוות הצעירים: מיכל, אורטל, ימית, אלינור ונטע <br/>**
+**צוות הצעירים: מיכל, אורטל, ימית, אלינור ונטע <br>**
 
 ## שכבת הבוגרים:
 
