--- a/content/weekly-update/שבוע-צבעוני-וגאה.md
+++ b/content/weekly-update/שבוע-צבעוני-וגאה.md
@@ -4,15 +4,15 @@ date: '2020-06-13T16:39:35+03:00'
 ---
 שבת שלום,
 
-1. **כמה חידודים בעניין פרידות הבוקר והאיסופים בסוף היום**: המצב החדש שנכפה על כולנו בהחלט פחות נח ונעים. עברנו כבר חודש מאז החזרה לשגרה ואנחנו מרגישים שיש התרופפות בעניין. בסך הכל ההתנהלות של כולנו עד כה היתה מוקפדת וטובה וחשוב לנו מאוד לעשות הכל כדי להמשיך להבטיח את הבריאות של כולנו ואת המשך הפעילות הרציפה של הגן. אנחנו מבינים את הצורך להשתהות בסוף היום, גם לנו מאוד לא נעים לחזור שוב ושוב ולבקש להזדרז, אבל כדי שכולם יוכלו לאסוף את ילדיהם בזמן, חשוב שנבצע את תהליך האיסוף בזריזות.<br/>חשוב לנו להזכיר שוב: **הכניסה לגן מותרת עם מסיכה על הפנים בלבד** ולאחר שליחת **הצהרת בריאות יומית**. בהגעה יש להמתין בתור במרחק אחד מהשני לפי סדר ההגעה שלכם. הכניסה לגן אסורה ללא אישור של אחי או צחי (גם במקרים שהדלת פתוחה בסוף היום) למעט מקרים חריגים שתואמו מראש. במידה ומישהו חוץ מכם מגיע לאסוף (סבא, סבתא ושות') עדכנו אותם בנהלים בבקשה. אגב, עד כה הסבים והסבתות מצטיינים! מודים לכם שוב על שיתוף הפעולה, הסבלנות וההתגייסות בעניין. 
-2. **ימי הולדת לילידי יוני, יולי ואוגוסט**: ימי הולדת ייקבעו לפחות שבוע מראש מול המובילות: אורטל, מיכל וחולוד. אנחנו חוגגים יום הולדת אחד בשבוע לכל קבוצה, ומפזרים את ימי ההולדת כך שכל ילד יקבל את תשומת הלב המלאה, והחגיגה תתקיים באופן רגוע המאפשר הנאה ונינוחות לכולם. זה אומר שהחגיגה לא בהכרח תתקיים בתאריך יום ההולדת המדוייק - חשוב להדגיש כי לתאריך עצמו אין באמת חשיבות לילדימות.<br/>לשכבת הבוגרים ישנה פסקה נוספת בנושא בהודעות של השכבה.
+1. **כמה חידודים בעניין פרידות הבוקר והאיסופים בסוף היום**: המצב החדש שנכפה על כולנו בהחלט פחות נח ונעים. עברנו כבר חודש מאז החזרה לשגרה ואנחנו מרגישים שיש התרופפות בעניין. בסך הכל ההתנהלות של כולנו עד כה היתה מוקפדת וטובה וחשוב לנו מאוד לעשות הכל כדי להמשיך להבטיח את הבריאות של כולנו ואת המשך הפעילות הרציפה של הגן. אנחנו מבינים את הצורך להשתהות בסוף היום, גם לנו מאוד לא נעים לחזור שוב ושוב ולבקש להזדרז, אבל כדי שכולם יוכלו לאסוף את ילדיהם בזמן, חשוב שנבצע את תהליך האיסוף בזריזות.<br>חשוב לנו להזכיר שוב: **הכניסה לגן מותרת עם מסיכה על הפנים בלבד** ולאחר שליחת **הצהרת בריאות יומית**. בהגעה יש להמתין בתור במרחק אחד מהשני לפי סדר ההגעה שלכם. הכניסה לגן אסורה ללא אישור של אחי או צחי (גם במקרים שהדלת פתוחה בסוף היום) למעט מקרים חריגים שתואמו מראש. במידה ומישהו חוץ מכם מגיע לאסוף (סבא, סבתא ושות') עדכנו אותם בנהלים בבקשה. אגב, עד כה הסבים והסבתות מצטיינים! מודים לכם שוב על שיתוף הפעולה, הסבלנות וההתגייסות בעניין. 
+2. **ימי הולדת לילידי יוני, יולי ואוגוסט**: ימי הולדת ייקבעו לפחות שבוע מראש מול המובילות: אורטל, מיכל וחולוד. אנחנו חוגגים יום הולדת אחד בשבוע לכל קבוצה, ומפזרים את ימי ההולדת כך שכל ילד יקבל את תשומת הלב המלאה, והחגיגה תתקיים באופן רגוע המאפשר הנאה ונינוחות לכולם. זה אומר שהחגיגה לא בהכרח תתקיים בתאריך יום ההולדת המדוייק - חשוב להדגיש כי לתאריך עצמו אין באמת חשיבות לילדימות.<br>לשכבת הבוגרים ישנה פסקה נוספת בנושא בהודעות של השכבה.
 3. **מסיבות סיום**: כרגע ההנחיות מטעם משרד החינוך ומשרד הבריאות מאוד מגבילות אותנו. לא נוכל לקיים את המסיבות הקלאסיות שלנו. אנחנו מתכננים כמה אפשרויות ומחכים לראות האם ההצעות שלנו עומדות במגבלות. נעדכן בקרוב. 
-4. **שינויים ועדכונים בבית**: הקשר בינינו, ההורים והצוות הוא חשוב ומשמעותי לשני הצדדים. אנחנו מאוד מקפידות, גם בימים אלו בהם אתם פחות נפגשים עם הצוות, לעדכן אתכם בכל שינוי או אירוע שקורה בגן, כי אנחנו מאמינות שהתקשורת והעברת המידע חשובה וקריטית להתקדמות הילדימות. כפי שאתם מצפים לקבל מאיתנו עדכונים אלה על שינויים, כך גם אנחנו מצפיים לקבל מכם עדכונים.<br/>השבוע גילינו בדיעבד כי ישנם ילדים שהוריהם חזרו לעבוד אחרי תקופה ארוכה, ילדים שעברו דירה, נפרדו ממוצץ, וכדומה - מבלי שההורים ידעו אותנו על כך. לשינויים מסוג זה יש לעתים קרובות השפעות רגשיות והתנהגותיות על הילדימות, ואנחנו שואפות ללוות אותם בתהליכים אלה ברגישות, אך יותר קשה לנו לעשות זאת אם איננו יודעות עליהם. אנחנו לעתים מזהות שינויים בהתנהגות שאיננו יודעים את מקורם, ומגלים רק בדיעבד שהיו שינויים. לכן אנו מבקשות: כשאתם עוברים דירה - עדכנו אותנו יומיים מראש. כשאתם מתכננים להפרד ממוצץ או רוצים להתחיל גמילה מחיתולים - נשמח אם תדברו איתנו מראש וכך נוכל לסנכרן תהליכים.
+4. **שינויים ועדכונים בבית**: הקשר בינינו, ההורים והצוות הוא חשוב ומשמעותי לשני הצדדים. אנחנו מאוד מקפידות, גם בימים אלו בהם אתם פחות נפגשים עם הצוות, לעדכן אתכם בכל שינוי או אירוע שקורה בגן, כי אנחנו מאמינות שהתקשורת והעברת המידע חשובה וקריטית להתקדמות הילדימות. כפי שאתם מצפים לקבל מאיתנו עדכונים אלה על שינויים, כך גם אנחנו מצפיים לקבל מכם עדכונים.<br>השבוע גילינו בדיעבד כי ישנם ילדים שהוריהם חזרו לעבוד אחרי תקופה ארוכה, ילדים שעברו דירה, נפרדו ממוצץ, וכדומה - מבלי שההורים ידעו אותנו על כך. לשינויים מסוג זה יש לעתים קרובות השפעות רגשיות והתנהגותיות על הילדימות, ואנחנו שואפות ללוות אותם בתהליכים אלה ברגישות, אך יותר קשה לנו לעשות זאת אם איננו יודעות עליהם. אנחנו לעתים מזהות שינויים בהתנהגות שאיננו יודעים את מקורם, ומגלים רק בדיעבד שהיו שינויים. לכן אנו מבקשות: כשאתם עוברים דירה - עדכנו אותנו יומיים מראש. כשאתם מתכננים להפרד ממוצץ או רוצים להתחיל גמילה מחיתולים - נשמח אם תדברו איתנו מראש וכך נוכל לסנכרן תהליכים.
 5. **פורום הורים**: פורום בנושא הכנה למעבר לגן עירוני יתקיים ביום שלישי הקרוב בשעה 17:30 בגן שלנו. משך המפגש כשעה, והוא מתאים לכל משפחה שעוברת לגן עירוני בשנה הבאה (גם משכבת הצעירים). מוזמנימות לשלוח שאלות לקראת הפורום עד יום ראשון בשעה 20:00.
 
 **שבת שלום!**
 
-**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**<br/>
+**אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**<br>
 
 ## שכבת הצעירים
 
@@ -86,7 +86,7 @@ date: '2020-06-13T16:39:35+03:00'
 
 **בברכת שבוע כיפי ונעים,**
 
-**אלינור, ימית, מיכל ואורטל**<br/>
+**אלינור, ימית, מיכל ואורטל**<br>
 
 ## שכבת הבוגרים:
 
