--- a/content/weekly-update/שבוע-של-קפיצות-מדרגה-בגן-שלנו.md
+++ b/content/weekly-update/שבוע-של-קפיצות-מדרגה-בגן-שלנו.md
@@ -12,7 +12,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 **אחי צחי והצוות **
 
-**<br/>**
+**<br>**
 
 
 
@@ -20,7 +20,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 ## 
 
-<br/>
+<br>
 
 אחד העקרונות החשובים ביותר עבורנו הוא לחשוף את הילדימות לעולם של טעמים בריאים ומזינים.
 
@@ -30,7 +30,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 
 
-<br/>
+<br>
 <br>
 
 השבוע לקחנו את זה עוד צעד אחד קדימה כאשר המסע המופלא בעולם החושים הביא אותנו לחוש הטעם.
@@ -44,7 +44,7 @@ date: '2019-07-13T17:18:16+03:00'
 כל אחת מן החיות הללו מצאה לעצמה שימוש מיוחד ללשון שלה ומה אנחנו יכולים לעשות עם הלשון שלנו?
 
 ליצור מילים וצלילים מיוחדים, להקיש עם הלשון על החך, לצקצק, ללקק ולטעום! 
-<br/>
+<br>
 
 <br>
 
@@ -66,7 +66,7 @@ date: '2019-07-13T17:18:16+03:00'
 את הצנונית המרה אי אפשר לשכוח, כמה קטנה ככה מרה, מרקמה קשה וחלק. 
 
 כך עברנו בין טעמים שונים וחיברנו בין הריח והטעם שלהם. 
-<br/>
+<br>
 
 
 <br>
@@ -86,7 +86,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 על השולחן פרסנו קערות עם כל הטעמים שטעמנו עד עכשיו - מתוק, מלוח, מר וחמוץ. כיסינו את העיניים ומתחנו את היד ומה יצא? 
 
-ה<br/> אני מודה שלא הייתי בטוחה שיהיו לנו כל כך הרבה ילדימות נועזים ואמיצים! 
+ה<br> אני מודה שלא הייתי בטוחה שיהיו לנו כל כך הרבה ילדימות נועזים ואמיצים! 
 
 כולם ללא יוצא מן הכלל רצו להתנסות! ואנחנו אתגרנו את היכולת שלהם להתנסות בטעמים ושילובים חדשים באמצעות משחק. 
 
@@ -106,7 +106,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 אם בתחילת השנה הילדימות אספו משחק אחד או שניים, כיום יש להם כבר אזורים שלמים שהם אוספים, לכל אחד ואחת תחומי אחריות והכל נעשה בצורה משחקית ושיתופית. הילדימות כבר יודעים היכן מקומם של כל המשחקים, לעיתים אף יותר טוב מאיתנו, וכיצד ממיינים - ארגז של מכוניות, ארגז של קסדות וכו׳. 
 
-<br/>
+<br>
 
 שכבר הבוגרים בגן שלנו עובדת לרוב בשיתוף פעולה שכבתי, כחלק מההכנה לעבודה שכבתית יותר 
 
@@ -120,7 +120,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 
 
-<br/>ע בכניסה למפגש האזנו לצליל מיוחד, נעימה של כלי מוסיקלי… האם הצליל הזה נעים לנו? מה הוא מזכיר לנו? 
+<br>ע בכניסה למפגש האזנו לצליל מיוחד, נעימה של כלי מוסיקלי… האם הצליל הזה נעים לנו? מה הוא מזכיר לנו? 
 
 זוהי [הגיטרה](https://www.youtube.com/watch?v=5jkiF7FZVGw&list=PLkrkLLfrxmlHgMhlqokHqrHA7PIAzAPjR&index=11&t=0s)! דבר שהוביל לשיח שלם על הכלי המיוחד, כיצד אוחזים את הגיטרה? איך מנגנים עליה? מה החוטים האלה הפרוסים לאורכה?  - לולו ואלי המדהימות הראו לנו כיצד אוחזים את הגיטרה ופורטים על המיתרים, כאשר לכל מיתר צליל מיוחד.. 
 
@@ -146,13 +146,13 @@ date: '2019-07-13T17:18:16+03:00'
 >
 > היה פעם איש, קראו לו נסים 
 >
-><br/> תמיד הלך לישון עם קצפת בכיסים. 
+><br> תמיד הלך לישון עם קצפת בכיסים. 
 >
 > קצפת בכיסים, קצפת בכיסים, קצפת בכיסים, קצפת בכיסים. 
 >
 > תנין בשרוול, תנין בשרוול, תנין בשרוול, תנין בשרוול. 
 >
-><br/>וד על הזקן, קיפוד על הזקן, קיפוד על הזקן, קיפוד״! 
+><br>וד על הזקן, קיפוד על הזקן, קיפוד על הזקן, קיפוד״! 
 
 
 <br>
@@ -162,7 +162,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 
 
-<br/>
+<br>
 
 **הודעות 
 **
@@ -170,13 +170,13 @@ date: '2019-07-13T17:18:16+03:00'
 \*	לא לשכח להביא שקיות בד או ניילון לבגדים רטובים או מלוכלכים - אנחנו בימים מלאים מים ובוץ
 
 \*	הקפידו לרוקן את המגירות מיצירות וחפצים אישיים.
-<br/><br/>
+<br><br>
 \*	 נוהל ימי א׳ סדינים רעננים ובקבוקי מים מלאים 
 
 <br>
 
 **שיהיה שבוע נהדר 
-<br/>
+<br>
 
 **ויקה וחולוד
 **
@@ -194,7 +194,7 @@ date: '2019-07-13T17:18:16+03:00'
 **על הכנסת אורחים כזו עוד לא שמעתם. 
 **
 
-<br/>כבר יודעים שלארח אנחנו מאוד אוהבים.. הילדימות לא נשארים אדישים לאף טכנאי, הורה או מכר שמגיע לבקר ומציעים לו מכל הטוב שיש לגן להציע. 
+<br>כבר יודעים שלארח אנחנו מאוד אוהבים.. הילדימות לא נשארים אדישים לאף טכנאי, הורה או מכר שמגיע לבקר ומציעים לו מכל הטוב שיש לגן להציע. 
 
 השבוע ביקרה אצלינו אורחת לא רגילה!
 
@@ -258,7 +258,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 
 בהמשך השבוע דיברנו על הדברים שאנחנו אוהבים לעשות בים... אחרי דיון פורה הגענו לסוגיית האוכל כמובן. 
-<br/>
+<br>
 החברים סיפרו על הרבה פירות, במבה ואפילו ספגטי. 
 
 ומה אנחנו עושים עם השאריות של הזבל? מה יקרה אם נזרוק אותם לים ולא לפח?
@@ -278,7 +278,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 **משחק של סוף יום 
 **
-<br/>
+<br>
 השבוע אמצנו באופן קבוע את משחק הרמזים חם-קר. 
 
 אנחנו מזמינים את אחד החברים לצאת מהכיתה, ובזמן הזה אנחנו מסתירים חפץ
@@ -290,7 +290,7 @@ date: '2019-07-13T17:18:16+03:00'
 רק היום, רק היום! דוכן האבטיח הכי שווה בעיר נפתח בחצר שלנו
 
 כשעומס החום מתגבר אין יותר כיף ומרענן מאבטיח קפוא. בבית העץ פתחנו דוכן, כאשר כל יום מחנכת אחרת מוכרת בו והקונים מפרגנים גם אם מחליטים להעלות מחירים. 
-<br/>
+<br>
 ואיך אפשר לאכול אבטיח קפוא בלי [השיר הקייצי ](https://www.youtube.com/watch?v=7AhsLVYJiFw)שאנחנו כל כך אוהבים 
 
 
@@ -306,7 +306,7 @@ date: '2019-07-13T17:18:16+03:00'
 > גם בשמש גם בצל 
 >
 > יולה, יולללה, יולה, יוללה"
-<br/>
+<br>
 <br>
 
 
@@ -328,7 +328,7 @@ date: '2019-07-13T17:18:16+03:00'
 **פעילויות בקבוצות קטנות
 **
 
-<br/>ע בקבוצת היצירה חלמנו על חוף הים. קיבלנו משטח לבן. מה נוסיף לו כדי שיהפוך לים? התחלנו מהדבק. מרחנו עם אצבעות או כפיות. הוספנו רצועות של בד תכלת ודמיינו שאלה הגלים שלנו. היו כאלה שבחרו ליצור ים סוער עם גלים גבוהים וכאלה נפשם חפצה דווקא בים רגוע...
+<br>ע בקבוצת היצירה חלמנו על חוף הים. קיבלנו משטח לבן. מה נוסיף לו כדי שיהפוך לים? התחלנו מהדבק. מרחנו עם אצבעות או כפיות. הוספנו רצועות של בד תכלת ודמיינו שאלה הגלים שלנו. היו כאלה שבחרו ליצור ים סוער עם גלים גבוהים וכאלה נפשם חפצה דווקא בים רגוע...
 
 בהמשך השבוע שאלתי את החברים מה עם החוף? איפה נבנה ארמונות, נשכב לנוח בצל או נשחק בבוץ? חייבים חוף בים שלנו. אז שוב הבאנו את הדבק, הפעם מעליו פיזרנו חול. 
 
@@ -368,17 +368,17 @@ date: '2019-07-13T17:18:16+03:00'
 2. כפי שאתם כבר יודעים המסיבה היא לא "הופעה" מיוחדת עבורכם או הצגה. המטרה שלנו היא שהילדימות ייהנו יחד אתכם. הקונספט הוא תחנות פעילות בנושא הפרויקט שלנו, עליהן אני ואלינור עבדנו רבות בשיתוף עם הילדימות. אנחנו נזדקק לשיתוף הפעולה המלא שלכם על מנת שזה יצליח. תעברו עם הילדימות בין התחנות, הסבירו את ההוראות והקפידו להשאר קשובים להנחיות כדי שכולם יוכלו ליהנות. 
 
 
-<br/><br/>
+<br><br>
 3. יאיר אבא של ליעד וירון אבא של אביגיל התנדבו לעזור לנו בהפעלת התחנה האחרונה (הקרירה והטעימה)** אנחנו עדיין זקוקים להורה נוסף שיתנדב.
 **
 
-<br/>
+<br>
 
 4.  **למי יש מחצלת גדולה להשאיל לנו למסיבה?** שידבר איתי תודה! 
 
 
 
-\<br/>ם א' בנוהל- סדינים, בקבוקים ותמונה מהסופ"ש שלכם. 
+\<br>ם א' בנוהל- סדינים, בקבוקים ותמונה מהסופ"ש שלכם. 
 
 
 
@@ -390,7 +390,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 <br><br>
 
-<br/>דכון שבועי – בוגרים א'
+<br>דכון שבועי – בוגרים א'
 
 <br>
 
@@ -416,7 +416,7 @@ date: '2019-07-13T17:18:16+03:00'
 <br>
 
 **הגיע זמן לניסוי! 
-*<br/>
+*<br>
 
 בקערה אחת שפכנו על האבקה מים... כלום לא קרה.
 
@@ -460,7 +460,7 @@ date: '2019-07-13T17:18:16+03:00'
 >
 > "הם רצים מסביבך במעגלים!" אמרה אמאאא. 
 >
-><br/>י יודע", אמר צמריקו. "נכון שזה נפלא?" 
+><br>י יודע", אמר צמריקו. "נכון שזה נפלא?" 
 
 
 
@@ -484,7 +484,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 כשהתורנים שמים לב שיש רעש בכיתה הם יכולים להסב את תשומת ליבם של החברים לרעש ובכך ניתן להמשיך לשבת בצורה רגועה ולשמור על הספרים. ילדי תקווה כבר ממש בוגרים וחשוב לנו להעניק להם את הזכות להיות אחראים יותר. כבר תקופה ארוכה שאנחנו מעודדים את האחריות הזאת באמצעות תורני הנעליים שלנו שאחראים לסדר את הנעליים של החברים לפני השינה, וכעת אנחנו מעבירים תחום אחריות נוסף אל הקבוצה בעניין קריאת הספרים שלנו. אין דבר יותר מעצים מהיכולת לקחת אחריות, לעזור ולתרום לקבוצה.
 
-<br/>
+<br>
 
 
 <br>
@@ -496,7 +496,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 שאלנו את הילדימות מה המילה טפטפת מזכירה להם, ויערה מיד אמרה "טיפות!".
 
-נ<br/>לילדימות להתקרב ולהתבונן בטפטפות ובטיפות שיצאו מהן.
+נ<br>לילדימות להתקרב ולהתבונן בטפטפות ובטיפות שיצאו מהן.
 
 פלג רצה לדעת כיצד הן עובדות.
 
@@ -522,7 +522,7 @@ date: '2019-07-13T17:18:16+03:00'
 ותומר הראה לנו שהוא משקה את השורשים של הצמח ולא את הפרחים.
 
 את העציץ שלנו שמנו בשמש, וכל יום השבוע שמנו לב אם משהו השתנה, ואכן כל יום העציץ פרח קצת יותר, עד שלבסוף ביום שישי, הילדימות ספרו חמישה פרחים ורודים בעציץ!
-<br/>
+<br>
 פריחת העציץ שלנו בסוף התהליך השבועי העניקה לנו תחושה של הישג וגאווה. 
 
 
@@ -536,7 +536,7 @@ date: '2019-07-13T17:18:16+03:00'
 דיברנו על הקבוצה ועל כך שכל מי שבקבוצה יצטלם ויופיע בתמונה. אבל... למה אנחנו בכלל מצטלמים?
 
 כדי שתהיה לנו מזכרת!
-<br/>
+<br>
 כך אולי אחרי שכבר נהיה בגן החדש נוכל לראות את החברים מהגן שלנו בתמונה, ואולי נוכל לבקש מאמא ואבא שיתקשרו אליהם, וככה נוכל לשמור על קשר!
 
 נתנו לילדימות לבחור איך נצטלם וניסינו כמה אפשרויות: 
@@ -544,7 +544,7 @@ date: '2019-07-13T17:18:16+03:00'
 באחת מהן קפצנו כולנו באותו זמן!
 
 בתמונה אחרת החלטנו שאנחנו רצים כולם ביחד מצד אחד של החצר לשני.
-<br/>
+<br>
 בתמונה השלישית רצינו ליצור פרח של קבוצת תקווה, הנחנו על הרצפה של החצר חישוק גדול ואמרנו שזה הצוף של הפרח, ואנחנו נהיה עליי הכותרת.
 
 לבסוף הילדימות שיתפו שהם רוצים תמונה עם הדגל שלנו, אז עשינו תמונה אחת בכיתה, נתנו לילדימות לקשט את הכיתה, עם בדים צבעוניים והעציץ שלנו שהשקנו השבוע.
@@ -554,11 +554,11 @@ date: '2019-07-13T17:18:16+03:00'
 השיתוף של הילדימות במזכרת שלהם הראה כמה הם מתרגשים לקראת סיום השנה ואנחנו מקפידים לדבר בהדרגה על התהליך על מנת להפוך את הפרידה מהגן לנעימה ומדורגת יותר. 
 
 
-<br/><br/>
+<br><br>
 
 **מוזיקה ללב היא חודרת
 **
-<br/>
+<br>
 השבוע, במהלך המשחק בכיתה, הילדים מאוד התלהבו מהמשחק עם האריות והנמרים. לני הזכירה לנו שיר שפעם אהבנו לשמוע שנקרא[ "שקט שיהיה"](https://youtu.be/R81J666zXJ8). וכמובן ששמענו אותו. 
 
 ובהשראת המשחק ולקראת הסרט החדש שעומד לצאת, נהננו מפסקול המחזמר הנפלא מברודווי של [מלך האריות](https://youtu.be/ewOAsUWQJvo) (ממליצה לכם לחפש בספוטיפיי).
@@ -572,7 +572,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 <br>
 
-*<br/>עות חשובות
+*<br>עות חשובות
 **
 
 \# לא לשכוח סדינים ובקבוקים מלאים
@@ -650,7 +650,7 @@ date: '2019-07-13T17:18:16+03:00'
 רגע... אחי... מה זה כל הספרים האלו שם לידך? 
 
 
-<br/>
+<br>
 מה דעתכם שננסה להכניס את הפרחים לתוך הספרים ונראה מה יקרה בעוד כמה ימים.
 
 כל חבר וחברה בחרו את הפרחים המועדפים עליהם, וספר של מבוגרים או כמו שאירי הגדירה "ספר של תורה" אכן. תורה לייבש פרחים :) 
@@ -672,7 +672,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 מי אלו הקאובוייז ?? הם דוהרים קדימה יש להם כובעים מגניבים, מגפיים מדליקות...
 
-<br/>
+<br>
 
 הכרנו את השיר שלהם. 
 
@@ -704,7 +704,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 נזכרנו שפעם, לפני המווווווון זמן הייתי הגננת של קבוצת ציונה! תום, אבינעם, רומי ורז הזכירו לנו שלפני שהגיעו להלו, הם היו בציונה! 
 
-ת<br/>זכיר את השיר של [ציונה](https://www.youtube.com/watch?v=EtZDU8zKXwU) שהיינו שרים במפגשים, והציע שנכיר אותו לכולם. .   
+ת<br>זכיר את השיר של [ציונה](https://www.youtube.com/watch?v=EtZDU8zKXwU) שהיינו שרים במפגשים, והציע שנכיר אותו לכולם. .   
 
 איזה כיף להיזכר... 
 
@@ -740,7 +740,7 @@ date: '2019-07-13T17:18:16+03:00'
 סיפור העין האחת של הדג הוביל אותנו לשיח על פרופיל הפנים. 
 
 מתי רואים שתי עיניים ומתי רק עין אחת? כשמתסכלים עלינו מהצד ולא מלפנים
-<br/>
+<br>
 עשינו ניסיון בבחינת הפרופיל עם החבר שישב לידנו 
 
 
@@ -750,13 +750,13 @@ date: '2019-07-13T17:18:16+03:00'
 תודה להלו האלופים היה לי כיף ונעים:) 
 
 
-<<br/>
+<<br>
 
 **במפגש עם דור ריקודים תנועה 
 **
 
 
-<br/>
+<br>
 ערכנו מפגש ספורטיבי במיוחד, מלא בתנועה ובכושר.
 
 בליווי שירים קיצביים שאנו אוהבים.
@@ -774,7 +774,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 [דפנה דקל - זה רק ספורט
 ](https://youtu.be/W6HkDb8JqLM)
-<br/>
+<br>
 
 
 [אה גה דו דו
@@ -784,7 +784,7 @@ date: '2019-07-13T17:18:16+03:00'
 
 
 
- <br/>ות תנועתית שכבנו על השטיחים למנוחה קלה הרגשנו את הגוף שלנו שעכשיו עוצר, נושם…נתנו לאיברים שלנו מקום, לרגליים לידיים לראש ולבטן הנשימה שלנו התחילה מהירה ולאט האטה..
+ <br>ות תנועתית שכבנו על השטיחים למנוחה קלה הרגשנו את הגוף שלנו שעכשיו עוצר, נושם…נתנו לאיברים שלנו מקום, לרגליים לידיים לראש ולבטן הנשימה שלנו התחילה מהירה ולאט האטה..
 
 לאחר המנוחה נכנסנו לתנוחות יוגה כלב מביט מטה,קוברה וכלב מביט למטה.
 
